--- a/sections/Analysis_EventSelection.tex
+++ b/sections/Analysis_EventSelection.tex
@@ -15,15 +15,15 @@ The final state jets in electroweak production of $ZZ^*(\rightarrow 4\ell) jj$ c
 
 \subsection{Signal Region}
 \label{subsec:SignalRegion}
-The two $Z$ bosons in the electroweak production of $ZZjj$ are produced centrally with respect to the dijet. Thus, the signal region of the analysis is defined based on the centrality ($\zeta$) of the di-$Z$boson production in an event. Centrality depends on the rapidity of the quadruplet and the rapidity of the dijet as:
+The two $Z$ bosons in the electroweak production of $ZZ^*jj$ are produced centrally with respect to the dijet. Thus, the signal region of the analysis is defined based on the centrality ($\zeta$) of the di-$Z$boson production in an event. Centrality depends on the rapidity of the quadruplet and the rapidity of the dijet as:
 \begin{equation}
-    \zeta~=~\frac{|y_{quadruplet}~-~ 0.5*(y_{leading~jet}~+~y_{sub-leading~jet})| }{|y_{leading~jet}~-~y_{sub-leading~jet}|}
+    \zeta~=~\frac{|y_{quadruplet}~-~ 0.5*(y_{leading~jet}~+~y_{sub-leading~jet})| }{|y_{leading~jet}~-~y_{sub-leading~jet}|}.
     \label{eq:centr}
 \end{equation}
 
 Figure \ref{fig:centrality_a} shows the predicted MC distribution of centrality for the three main production modes of $ZZ^*(\rightarrow 4 \ell)jj$. The significance of the EWK component over the inclusive parton initiated and $gg$-loop initiated QCD production is defined as, 
 \begin{equation}
-    s=\frac{N_{EWK}}{\sqrt{N_{QCD}^{(qq)}+N_{QCD}^{(gg)}}}
+    s=\frac{N_{EWK}}{\sqrt{N_{QCD}^{(qq)}+N_{QCD}^{(gg)}}},
     \label{eqn:EWKSignificance}
 \end{equation}
 where $N_{EWK}$, $N_{QCD}^{(qq)}$ and $N_{QCD}^{(gg)}$ are the numbers of events from electroweak, parton-initiated QCD and gluon-loop initiated QCD productions, respectively. The chosen cut value on the centrality maximizes the EWK significance while maintaining a good selection efficiency of EWK events. Figure in \ref{fig:centrality_b} shows the efficiency and significance for various cut values of centrality.  
