--- a/sections/Analysis_FiducialSelection.tex
+++ b/sections/Analysis_FiducialSelection.tex
@@ -5,7 +5,7 @@ The ATLAS detector has limited acceptance in the physical phase space, and the s
 
 The kinematic selections for the fiducial phase space are close to the detector-level object and event selections. The kinematic requirements applied are motivated by the nature of the electroweak production of $pp\rightarrow ZZ^* ( \rightarrow 4\ell) jj$ $[\ell = e,~\mu]$, where the two SF-OC lepton pairs from two $Z$ bosons are produced centrally with respect to the highly energetic dijet. Moreover, the fiducial phase space contains no leptons from tau decays. Both fiducial-level electrons and muons are required to be dressed. The dressing procedure accounts for the energy losses of leptons through photon emissions via bremsstrahlung. Dressed leptons are constructed by adding the four-momenta of nearby photons within the lepton's small $\Delta R < 0.1$ cone. Several kinematic cuts summarized in Table \ref{tab:FidObjectCut} are applied individually to the muons, electrons, and jets to ensure the selected objects fall within detector acceptance before defining the events. Motivated by the discussion of physics object reconstruction in Section \ref{sec:ParticleReconstruction}, each electron is required to have $p_{T} > 7$ GeV and $|\eta| < 2.47$, whereas the muons satisfy $p_{T} > 5$ GeV and $|\eta| < 2.7$. 
 
-\begin{table}[htbp]
+\begin{table}[!htbp]
     \centering
     \caption{Details of the kinematic pre-selection applied to the particle-level electrons, muons, and jets. The required kinematic cuts are applied to the dressed leptons.
     \label{tab:FidObjectCut}}
@@ -24,7 +24,7 @@ Event quadruplets are formed from the events with at least four leptons by requi
 
 Similarly, the event dijet is constructed from the two leading jets with the opposite sign of pseudo-rapidity ($\eta$) to imitate the detector-level VBS dijet production, where jets are reconstructed on the opposite side of the detector. Similar to detector-level, the particle-level jets are required to satisfy $|n| < 4.5$, $p_{T,~leading~jet} > 40$ GeV, and $p_{T,~sub-leading~jet} > 30$ GeV. The dijet is required to have a significant rapidity separation of $|\Delta y_{jj}| > 2$ and high invariant mass of $m_{jj} > 300$ GeV to resemble dijet produced in electroweak $ZZ^*(\rightarrow 4 \ell) jj$ production. Table \ref{tab:QuadDijetFidCut} summarizes the requirements to select the particle-level quadruplet and dijet in an event.           
     
-\begin{table}[htbp]
+\begin{table}[!htbp]
     \caption{Details of the kinematic selections applied to form a particle-level quadruplet and a particle-level dijet in the fiducial volume. 
     \label{tab:QuadDijetFidCut}}
     \begin{tabular}{|| l || c ||}
