--- a/sections/Analysis_Systematics.tex
+++ b/sections/Analysis_Systematics.tex
@@ -8,9 +8,9 @@ The following sources of theoretical uncertainties are considered in the measure
 \begin{itemize}
 \item{\textbf{Uncertainties on QCD Scale:} As discussed in Section \ref{sec:Pheno}, the theoretical predictions of cross-sections depend on the factorization scale ($\mu_{F}$) and renormalization scale ($\mu_{R}$) \cite{QCDScaleAndPDFUnc}. To account for this dependence, a QCD scale uncertainty is evaluated by scaling $\mu_{F}$ and $\mu_{R}$ independently using on-the-fly variations provided by the MC generators. The variations constitute of six-point variations of $\mu_{F}$ and $\mu_{R}$ from $-50\%$ to $+100\%$ around their nominal values of 1, such that \{$\mu_R = 0.5, \mu_F = 0.5$\}, \{$\mu_R = 0.5, \mu_F = 1.0$\}, \{$\mu_R = 1.0, \mu_F = 0.5$\}, \{$\mu_R = 1.0, \mu_F = 2.0$\}, \{$\mu_R = 2.0, \mu_F = 1.0$\}, and \{$\mu_R = 2.0, \mu_F = 2.0$\}. The final uncertainty is evaluated as the absolute envelope of the six variations. The QCD scale uncertainties are evaluated individually for $qqZZ$, $ggZZ$, and $EWK~ qqZZjj$ samples.
 }
-\item{\textbf{Uncertainties on PDF $\&$ $\alpha_{S}$:} The cross-sections also depend on the choice of the PDF used by the MC generators. Thus, the PDF uncertainty for Sherpa and \textsc{MadGraph5} samples that use NNPDF3.0NNLO is evaluated using the prescription described in Ref \cite{PDFForRunII} using on-the-fly variation weights. The PDF variations include a set of 100 internal variations, two additional variations from the nominal PDF reweighted to the alternative MMHT2014nnlo \cite{MMHT2014PDFs} $\&$ CT14nnlo \cite{CT14nnlo} PDF sets and variations of the strong coupling constant by $\pm0.001$ around the nominal value of $\alpha_{S}$ is $0.118$. The total uncertainty is taken as the absolute envelope of all standard deviations of $100$ internal variations and the two alternate PDF variations, added in quadrature with the envelope of the $\alpha_{S}$ variations, 
+\item{\textbf{Uncertainties on PDF $\&$ $\alpha_{S}$:} The cross-sections also depend on the choice of the PDF used by the MC generators. Thus, the PDF uncertainty for Sherpa and \textsc{MadGraph5} samples that use NNPDF3.0NNLO is evaluated using the prescription described in Ref \cite{PDFForRunII} using on-the-fly variation weights. The PDF variations include a set of 100 internal variations, two additional variations from the nominal PDF reweighted to the alternative MMHT2014nnlo \cite{MMHT2014PDFs} $\&$ CT14nnlo \cite{CT14nnlo} PDF sets, and variations of the strong coupling constant by $\pm0.001$ around the nominal value of $\alpha_{S}$ is $0.118$. The total uncertainty is taken as the absolute envelope of all standard deviations of $100$ internal variations and the two alternate PDF variations, added in quadrature with the envelope of the $\alpha_{S}$ variations, 
 \begin{equation}
-    \sigma_{PDF}^{NNPDF3.0NNLO} = \sqrt{ [ max (\sigma_{std.~dev.~int.}, |\sigma_{MMHT2014nnlo}| , |\sigma_{CT14nnlo}|~)]^2 + \sigma_{\alpha_S}^2 }
+    \sigma_{PDF}^{NNPDF3.0NNLO} = \sqrt{ [ max (\sigma_{std.~dev.~int.}, |\sigma_{MMHT2014nnlo}| , |\sigma_{CT14nnlo}|~)]^2 + \sigma_{\alpha_S}^2 }.
 \end{equation}
 
 The PDF uncertainty is evaluated individually for $qqZZ$, $ggZZ$, and \textsc{MadGraph5} $EWK~ qqZZjj$ samples.
@@ -28,7 +28,7 @@ The experimental uncertainties on recently published cross-section measurements 
 
 \end{itemize}
 
-As shown above, the theoretical uncertainties are process specific and are evaluated separately for each MC sample. The theory uncertainties need to be propagated to the unfolded cross-section measurements. For each theory uncertainty, variation-applied particle and detector-level predictions are built by substituting the varied distribution for the selected process instead of the nominal one. The variation-applied detector-level prediction is unfolded using the unfolding inputs from nominal SM predictions. For each variation, the difference of variation-applied unfolded result from the variation-applied truth MC prediction gives the systematic uncertainty. In general, the theoretical variations significantly affect the predicted particle-level and detector-level predictions; however, they have a negligible impact on the shape of the distributions. Since the variation is applied to both detector and particle-level yields, the resulting uncertainties from theory systematics on the unfolded cross-sections are small.
+As shown above, the theoretical uncertainties are process specific and are evaluated separately for each MC sample. The theory uncertainties need to be propagated to the unfolded cross-section measurements. For each theory uncertainty, variation-applied particle and detector-level predictions are built by substituting the varied distribution for the selected process instead of the nominal one. The variation-applied detector-level prediction is unfolded using the unfolding inputs from nominal SM predictions. For each variation, the difference of variation-applied unfolded result from the variation-applied truth MC prediction gives the systematic uncertainty. In general, the theoretical variations significantly affect the predicted particle-level and detector-level predictions; however, they have a negligible impact on the shape of the distributions. Since the variation is applied to both the detector and the particle-level yields, the resulting uncertainties from theory systematics on the unfolded cross-sections are small.
 
 \subsection{Experimental Uncertainties}
 \label{subsec:ExpUnc}
@@ -39,12 +39,12 @@ The analysis requires two jets in the final state. Therefore, jet-related uncert
 
 \begin{itemize}
     \item{\textbf{Jet Reconstruction Uncertainty:}
-    The jet-related uncertainties associated with reconstruction and different steps of calibration discussed in Section \ref{subsec:ParticleRecon_Jets} are provided by ATLAS-supported tool $\textit{JetUncertainties}\footnote{https://twiki.cern.ch/twiki/bin/view/AtlasProtected/JetUncertainties}$. The tool provides several configurations for jet-related uncertainties adjusted to the various needs of several analyses. The measurement uses $\textit{GlobalReduction\_FullJER}$ configuration with a total of $36$ uncertainties, each with upward and downward components, corresponding to $36\times2$ variations, $20\times 2$ of which are related to JES, and $13\times2$ are related to JER. $6\times 2$ of the $36 \times 2$ variations are related to the $\eta$ inter-calibration procedure, $4\times 2$ to the pile-up energy subtraction step in jet calibration, and $8 \times 2$ to the in-situ calibration of jets. Additional $1\times 2$ variations arise separately each from the flavor composition, flavor response, a single particle response at high $p_{T}$, and possible punch-through effects.
+    The jet-related uncertainties associated with reconstruction and different steps of calibration discussed in Section \ref{subsec:ParticleRecon_Jets} are provided by ATLAS-supported tool $\textit{JetUncertainties}\footnote{https://twiki.cern.ch/twiki/bin/view/AtlasProtected/JetUncertainties}$. The tool provides several configurations for jet-related uncertainties adjusted to the various needs of several analyses. The measurement uses $\textit{GlobalReduction\_FullJER}$ configuration with a total of $36$ uncertainties, each with upward and downward components, corresponding to $36\times2$ variations, $20\times 2$ of which are related to JES, and $13\times2$ are related to JER. $6\times 2$ of the $36 \times 2$ variations are related to the $\eta$ inter-calibration procedure, $4\times 2$ to the pile-up energy subtraction step in jet calibration, and $8 \times 2$ to the in-situ calibration of jets. Additional $1\times 2$ variations arise separately each from the flavor composition, flavor response, a single particle response at high $p_{T}$, and possible punch-through\footnote{particles' probabilities of passing through the calorimeters} effects.
     }
     \item{\textbf{JVT $\&$ fJVT Uncertainties:} Additional sets of jet uncertainties ($1\times 2$) arising each from the efficiencies of jet vertex selections, JVT, and fJVT cut requirements are also considered in the analysis. }
 \end{itemize}
 
-An envelope of the $13$ JER uncertainty added in quadrature to an envelope of each of the other sources gives the final impact of jet-related uncertainties. 
+An envelope of the up and down variation for each of the $13$ JER uncertainties are added in quadrature to get the total effect of JER systematics. The variations related to the JES and jet calibration are single-sided, and an average in modulus is taken as the uncertainty for each of these sources. The total uncertainty from jets is the sum quadrature of uncertainty from total JER and all other sources. 
 
 \textbf{Lepton Related Uncertainties: } The following categories define the lepton-related uncertainties in the analysis
 \begin{itemize}
@@ -55,10 +55,10 @@ tool $\textit{ElectronEffciencyCorrection} \footnote{https://gitlab.cern.ch/atla
     }
     \item{\textbf{Muon Efficiencies:} Similar to the electrons, muon efficiency uncertainty consists of variations on the trigger, identification, reconstruction, and isolation efficiencies of muons, which are provided by another ATLAS-supported tool $\textit{MuonEfficiencyCorrections} \footnote{21https://gitlab.cern.ch/atlas/athena/-/tree/21.2/PhysicsAnalysis/MuonID/MuonIDAnalysis/MuonEfficiencyCorrections} $. In total, there are $10\times2$ nuisance parameters, sets of two ($2\times2$) variations corresponding to trigger efficiency scale factors, sets of four ($4\times2$) related to the identification and reconstructed efficiency, two sets of two ($2\times 2$) each corresponding to the isolation efficiency and track-to-vertex association efficiency. 
     }
-    \item{\textbf{Electron Scale $\&$ Resolution:} The electron scale and resolution uncertainty is accounted for by two sets of nuisance parameters corresponding $2\times2$ variations. 
+    \item{\textbf{Electron Scale $\&$ Resolution:} The electron scale and resolution uncertainty is accounted for by two sets of nuisance parameters corresponding to $2\times2$ variations. 
 
     }
-    \item{\textbf{Muon Scale $\&$ Resolution:} For muons resolution and scale uncertainties, there are $5$ sets of nuisance parameters, $2\times2$ corresponding to the muon momentum resolution as measured separately by the inner detector and the muon spectrometer. One set of nuisance parameters ($1\times 2$) corresponds to the uncertainties on the muon momentum scale, and two sets of $2\times 2$ are associated with the uncertainties in Sagitta correction.}
+    \item{\textbf{Muon Scale $\&$ Resolution:} For muons resolution and scale uncertainties, there are $5$ sets of nuisance parameters, $2\times2$ corresponding to the muon momentum resolution as measured separately by the inner detector and the muon spectrometer. One set of nuisance parameters ($1\times 2$) corresponds to the uncertainties on the muon momentum scale, and two sets of $2\times 2$ are associated with the uncertainties in measurement of muon sagitta due to the ID alignment.}
 \end{itemize}
 
 \textbf{Other Experimental Uncertainties: }
@@ -67,7 +67,7 @@ tool $\textit{ElectronEffciencyCorrection} \footnote{https://gitlab.cern.ch/atla
     \item{\textbf{Luminosity:} As discussed in Section \ref{subsec:Dataset}, the uncertainty in the collected integrated luminosity of $139 fb^{-1}$ is $\pm1.7\%$, which is applied as a flat variation to both particle and detector-level yields. } 
 \end{itemize}
 
-The experimental uncertainties affect all detector-level MC predictions and the estimate of the fake backgrounds. The experimental uncertainties are propagated to the unfolded cross-sections. For each systematic variation, signal ($qqZZ+ggZZ+EWK~qqZZjj$) and background ($ttV+VVV$) distribution variation-applied detector-level prediction is built. The variation is also applied to the fake background estimate. The variation-applied background (MC + fakes) are subtracted from the variation-applied total MC prediction and then unfolded using the unfolding inputs from the nominal SM prediction. The individual systematic uncertainty corresponds to the difference between the variation-applied and nominal unfolded distributions for each variation.  
+The experimental uncertainties affect all detector-level MC predictions and the estimate of the fake backgrounds. A total variation-applied detector-level prediction is constructed for each variation, including the contributions from signal physics processes ($qqZZ+ggZZ+EWK~qqZZjj$), MC predicted background physics processes ($ttV+VVV$) and variation-applied fake background estimate. The variation-applied background (MC + fakes) is first subtracted from the variation-applied total MC prediction and then unfolded using the unfolding inputs from the nominal SM prediction. The individual systematic uncertainty corresponds to the difference between the variation-applied and nominal unfolded distributions for each variation.  
 
 \subsection{Unfolding Uncertainties}
 \label{subsec:UnfoldingUnc}
@@ -76,8 +76,7 @@ The following two uncertainties are intrinsic to the unfolding process itself an
 \begin{itemize}
     \item{\textbf{Unfolding Bias:} The inherent unfolding bias can be estimated either using the data-driven method discussed in Section \ref{subsec:Bias} or using an MC-toy-based method. It is the most significant source of systematic uncertainty for the measurement. Both methods yield similar results. However, the MC-toy-based method is free from the influence of statistical fluctuation in data and thus is chosen as the systematic uncertainty on the intrinsic unfolding bias. 
 
-    First, ten thousand toys are constructed from the truth level MC distribution, independently fluctuating each bin of the truth distribution with a random number extracted from a Gaussian with mean zero and variance of $N_{truth}^{bin}$. A pseudo-detector-level dataset is created by \textit{folding} using the nominal response from MC. Folding is a technique to create a detector-level distribution from the MC by applying the detector's limited acceptance and inefficiencies, adding detector resolution-induced bin migration between the truth and detector-level distributions, and including the contribution of the fiducial fakes. The pseudo dataset is then unfolded using the nominal unfolding inputs and plotted as the average bias of the toys as a function of the toy's truth-level yield. The final unfolding bias is the value where this distribution intersects with the $68.3\%$ confidence interval of the toys' actual value. Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced} shows the unfolding bias evaluated in each bin of $m_{jj}$ in the VBS-Enhanced region, estimated using the MC-toy-based approach. The unfolding bias ranges from $8-15\%$ in different bins.%, similar to what was observed using the data-driven method. 
-
+    First, ten thousand toys are constructed from the truth level MC distribution, independently fluctuating each bin of the truth distribution with a random number extracted from a Gaussian with mean zero and variance of $N_{truth}^{bin}$. A pseudo-detector-level dataset is created by \textit{folding} using the nominal response from MC. Folding is a technique to create a detector-level distribution from the MC by applying the detector's acceptance and efficiency corrections, adding detector resolution-induced bin migration between the truth and detector-level distributions, and including the contribution of the fiducial fakes. The pseudo dataset is then unfolded using the nominal unfolding inputs and plotted as the average bias of the toys as a function of the toy's truth-level yield. The final unfolding bias is the value where this distribution intersects with the $68.3\%$ confidence interval of the toys' actual value. Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced} shows the unfolding bias evaluated in each bin of $m_{jj}$ in the VBS-Enhanced region, estimated using the MC-toy-based approach. The unfolding bias ranges from $8-15\%$ in different bins.
     \begin{figure}[!htb]
         \centering
         \begin{subfigure}{.48\textwidth}
@@ -110,13 +109,13 @@ The following two uncertainties are intrinsic to the unfolding process itself an
 
     }
 
-    \item{\textbf{QCD $qqZZ$ Modeling Uncertainty:} There are known differences in predictions from different generators caused by differences in parton shower and hadronization modeling. Therefore, the second source of unfolding systematics is required to account for the differences in the unfolding input modeling, which is estimated by varying the prediction of the dominant QCD $qqZZ$ process. To avoid double-counting of the unfolding method covered by the unfolding bias, an alternative $qqZZ$ sample predicted by \textsc{MadGraph5} is first reweighted to match the nominal-\textsc{Sherpa} lineshape. The relative difference in reweighted detector-level distribution is unfolded using the inputs from nominal-\textsc{Sherpa} and compared with the reweighted-\textsc{MadGraph5} particle-level distribution. The relative difference between these two distributions is taken as modeling systematic uncertainty. Figure \ref{fig:QCDModelUnc} shows the estimation of the modeling uncertainty for $m_{jj}$ in the VBS-Enhanced region. The ratio panel of the right plot shows the QCD modeling uncertainties, which range from $2-4\%$ varying in different bins.
+    \item{\textbf{QCD $qqZZ$ Modeling Uncertainty:} There are known differences in predictions from different generators caused by differences in parton shower and hadronization modeling. Therefore, the second source of unfolding systematics is required to account for the differences in the unfolding input modeling, which is estimated by varying the prediction of the dominant QCD $qqZZ$ process. To avoid double-counting of the unfolding method covered by the unfolding bias, an alternative $qqZZ$ sample predicted by \textsc{MadGraph5} is first reweighted to match the nominal-\textsc{Sherpa} lineshape. The reweighted detector-level distribution is unfolded using the inputs from nominal-\textsc{Sherpa} and compared with the reweighted-\textsc{MadGraph5} particle-level distribution. The relative difference between these two distributions is taken as modeling systematic uncertainty. Figure \ref{fig:QCDModelUnc} shows the estimation of the modeling uncertainty for $m_{jj}$ in the VBS-Enhanced region. The ratio panel of the right plot shows the QCD modeling uncertainties, which range from $2-4\%$ varying in different bins.
     
     \begin{figure}[!htb]
         \centering
         \includegraphics[width=.48\linewidth]{figures/Analysis/Systematics/QCDmodel_Dist.pdf}
         \includegraphics[width=.48\linewidth]{figures/Analysis/Systematics/QCDmodel_Unc.pdf}
-        \caption{The left plot shows detector-level predictions of $m_{jj}$ in VBS-Enhanced region predicted by \textsc{Sherpa}, \textsc{Madgraph} and \textsc{Madgraph} reweighted to match the \textsc{Sherpa} lineshape. The right plot shows reweighted-\textsc{MadGraph5} detector-level (blue) distribution, which is unfolded (black) using unfolding inputs from nominal-\textsc{Sherpa} and compared to the particle-level reweighted-\textsc{MadGraph5} distribution (red). The ratio panel of the right plot showing the ratio between reweighted truth-level \textsc{MadGraph5} and reweighted unfolded-level \textsc{MadGraph5} gives the QCD modeling uncertainties. \label{fig:QCDModelUnc}}
+        \caption{The left plot shows detector-level predictions of $m_{jj}$ in VBS-Enhanced region predicted by \textsc{Sherpa}, \textsc{Madgraph} and \textsc{Madgraph} reweighted to match the \textsc{Sherpa} lineshape. The right plot shows reweighted-\textsc{MadGraph5} detector-level (blue) distribution, which is unfolded (black) using unfolding inputs from nominal-\textsc{Sherpa} and compared to the particle-level reweighted-\textsc{MadGraph5} distribution (red). The lower panel of the right plot showing the ratio between reweighted truth-level \textsc{MadGraph5} and reweighted unfolded-level \textsc{MadGraph5} gives the QCD modeling uncertainties. \label{fig:QCDModelUnc}}
  \end{figure}  
 
     }
@@ -134,7 +133,7 @@ The statistical uncertainty from the recorded data needs to be propagated to the
 \label{subsec:SysUncBreakdown}
 Table \ref{tab:systematics_mjj_VBS_Enhanced} shows the impact of systematic uncertainties in the VBS-Enhanced region for each bin of $m_{jj}$. In most bins, the unfolding bias is the dominant source of systematic uncertainty, followed by the jet systematics. 
 
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \begin{tabular}{| l || c | c | c | c | c | }
 \hline \hline
