--- a/sections/Analysis_Trigger.tex
+++ b/sections/Analysis_Trigger.tex
@@ -3,7 +3,7 @@
 
 Due to the presence of four fully reconstructed leptons in the final state, the data events and detector-level MC events are preselected using a logical OR of different single and double-lepton triggers. The trigger menu varies according to the data-taking run periods to reflect the changes in the high-level trigger system, which are required to cope with increasing data rates. Additionally, trigger matching is required for the selected events. The trigger matching selects a subset of preselected events in which at least one lepton of the quadruplet is matched to one of the fired triggers. Table \ref{tab:Trigger} shows the trigger menu used by the analysis per different data periods using either electrons, muons, or mixed electron-muon triggers. The \textit{HLT\_*} string specifies the high-level trigger menu used where the "e" or "mu" substring specifies the type of object used to fire the trigger, and the attached number specifies the minimum $p_{T}$ threshold for the object. The substring \textit{lh*} attached to \textit{HLT\_*} stands for the likelihood identification working point for the electrons, and the \textit{ivar*} specifies the isolation working point used for either object. The string \textit{L1*} indicates the use of either calorimeters or MS L1 trigger, and the string \textit{noL1} suggests the absence of L1 triggers. 
 
-\begin{table}
+\begin{table}[!htbp]
     \centering
     \begin{tabular}{| l | c | c |}
     \hline 
