--- a/sections/theory_EWkProcess.tex
+++ b/sections/theory_EWkProcess.tex
@@ -11,7 +11,7 @@ As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ boson
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjqg.pdf}
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjgg.pdf}
    \end{center}
-  \caption{Typical diagrams of LO $qq$ and $gg$ induced QCD $\alpha_{S}^2 \alpha_{EWK}^{2}$ production of $ZZjj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. \label{fig:ZZjjFeynmanDiag_QCD_qq}}
+  \caption{Typical diagrams of LO $qq$ and $gg$ induced QCD $\alpha_{S}^2 \alpha_{EWK}^{2}$ production of $ZZ^*jj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. \label{fig:ZZjjFeynmanDiag_QCD_qq}}
  \end{figure} 
  
 \begin{figure}[!htbp]
@@ -19,7 +19,7 @@ As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ boson
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjbox.pdf}
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjggH.pdf}\\
   \end{center}
-  \caption{Typical diagrams for LO $gg$ loop induced the QCD $\alpha_{S}^4\alpha_{EWK}^{2}$ production of $ZZjj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. \label{fig:ZZjjFeynmanDiag_QCD_gg}}
+  \caption{Typical diagrams for LO $gg$ loop induced the QCD $\alpha_{S}^4\alpha_{EWK}^{2}$ production of $ZZ^*jj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. \label{fig:ZZjjFeynmanDiag_QCD_gg}}
  \end{figure}
  
 \begin{figure}[!htb]
@@ -47,32 +47,31 @@ As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ boson
   \caption{t-channel Higgs ZZjj Production.}
   \label{fig:ZZjjFeynmanDiag_EWk_d}
 \end{subfigure}\\
-\caption{Feynman diagrams at LO for the EWK $\alpha_{EWK}^4$ production of $ZZjj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. }
+\caption{Feynman diagrams at LO for the EWK $\alpha_{EWK}^4$ production of $ZZ^*jj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. }
 \label{fig:ZZjjFeynmanDiag_EWk}
 \end{figure}
 
 The triple and quartic self-interactions of the gauge bosons arise from the square of the non-Abelian structure of $SU(2)$ in the kinetic term $ \frac{1}{4} W^{a}_{\mu\nu} W^{\mu\nu}_{a}$ of the EWK Lagrangian in Equation \ref{eqn:EWKLagrangian1}. Implementing the values of the field strength tensor $W^{a}_{\mu\nu}$ from Equation \ref{eqn:SU2FST}, the relations of $W_{\mu}^{\pm}$ fields in Equation \ref{eqn:RealWBosons}, and the relations of neutral gauge fields in Equation \ref{eqn:NeutralGaugeBosons}, the triple and quartic self interaction terms become, 
 \begin{equation}
-\mathcal{L}_{3} = ie_{V=\gamma,Z} [ W^{+}_{\mu\nu} W^{-\mu} V^{\nu} - W^{-}_{\mu\nu} W^{+\mu} V^{\nu} + W_{\mu}^{+}W_{\nu}^{-}V^{\mu\nu} ] 
+\mathcal{L}_{3} = ie_{V=\gamma,Z} [ W^{+}_{\mu\nu} W^{-\mu} V^{\nu} - W^{-}_{\mu\nu} W^{+\mu} V^{\nu} + W_{\mu}^{+}W_{\nu}^{-}V^{\mu\nu} ], 
 \label{eqn:L_TGC}
 \end{equation}
 \begin{equation}
 \begin{array}{l}
 \mathcal{L}_{4} = e^{2}_{W} [ W^{-}_{\mu}W^{+\mu}W^{-}_{\nu}W^{+\nu} - W^{-}_{\mu}W^{-\mu}W^{+}_{\nu}W^{+\nu} ] \\
  \hspace{10pt} + e^2_{V=\gamma,Z} [ W^{-}_{\mu}W^{+\mu}V_{\nu}V^{\nu} - W^{-}_{\mu}V^{\mu}W^{+}_{\nu}Z^{\nu} ] \\
-  \hspace{10pt} + e_{\gamma}e_{Z} [ 2W^{-}_{\mu} W^{+\mu} Z_{\nu}A^{\nu} - W_{\mu}^{-}Z^{\mu}W^{+}_{\nu}A^{\nu} - W_{\mu}^{-}A^{\mu}W^{+}_{\nu}Z^{\nu} ]
+  \hspace{10pt} + e_{\gamma}e_{Z} [ 2W^{-}_{\mu} W^{+\mu} Z_{\nu}A^{\nu} - W_{\mu}^{-}Z^{\mu}W^{+}_{\nu}A^{\nu} - W_{\mu}^{-}A^{\mu}W^{+}_{\nu}Z^{\nu} ],
 \end{array}
 \label{eqn:L_QGC}
 \end{equation}
-where, $e_{\gamma} = g\sin\theta_{W}$; $e_{W} = \frac{e_{\gamma}}{2\sqrt{2}\sin\theta_{W}}$ $\&$ $e_{Z} = e_{\gamma}\cot\theta_{W}$ are the precise coupling strengths for vector boson self-interaction. Both triple and quartic neutral couplings, such as $ZZZ$ or $ZZZZ$ are absent in the SM. 
+where $e_{\gamma} = g\sin\theta_{W}$; $e_{W} = \frac{e_{\gamma}}{2\sqrt{2}\sin\theta_{W}}$ $\&$ $e_{Z} = e_{\gamma}\cot\theta_{W}$ are the precise coupling strengths for vector boson self-interaction. Both triple and quartic neutral couplings, such as $ZZZ$ or $ZZZZ$ are absent in the SM. 
 
 Similarly, the couplings of Higgs to vector bosons are also predicted precisely by the BEH mechanism in Equation \ref{eqn:LagBEHKin} as:
-
 \begin{equation}
-\mathcal{L}_{HVV} = \frac{m_{W}^2}{v^2} W^{+}_{\mu}W^{-\mu}h^{2} + \frac{m_{Z}^{2}}{v^2} Z_{\mu}Z^{\mu}h^{2}
+\mathcal{L}_{HVV} = \frac{m_{W}^2}{v^2} W^{+}_{\mu}W^{-\mu}h^{2} + \frac{m_{Z}^{2}}{v^2} Z_{\mu}Z^{\mu}h^{2}.
 \label{eqn:HVVCoupling}
 \end{equation}
 
-The EWK production of $ZZ^*(\rightarrow 4\ell ) jj$ is extremely sensitive to any possible anomalous triple gauge couplings (aTGC), anomalous quartic gauge couplings (aQGC), or anomalous Higgs to vector boson coupling \cite{SensitivityNP} \cite{EboliModelaQGC} \cite{BSM_Simple2HDM}. Therefore, it is imperative to probe the high energy behavior of the EWK production of $ZZ^*(\rightarrow 4\ell ) jj$ to seek possible deviations from the physics processes beyond the Standard Model (BSM). 
+The EWK production of $ZZ^*(\rightarrow 4\ell ) jj$ is extremely sensitive to any possible anomalous triple gauge couplings (aTGC), anomalous quartic gauge couplings (aQGC), or anomalous Higgs to vector boson coupling \cite{SensitivityNP} \cite{EFT_Eboli} \cite{BSM_Simple2HDM}. Therefore, it is imperative to probe the high energy behavior of the EWK production of $ZZ^*(\rightarrow 4\ell ) jj$ to seek possible deviations from the physics processes beyond the Standard Model (BSM). 
 
 The EWK $ZZ^*(\rightarrow 4\ell ) jj$ production with each $Z$ boson decaying to a pair of SF-OC lepton pair is an extremely rare process. Moreover, with limited statistics in Run$-2$, the QCD background processes dominate the $ZZ^*(\rightarrow 4\ell ) jj$ final state \cite{ATLASZZjj}. Therefore, the differential cross-sections discussed in this thesis are measured in a VBS-Enhanced phase space with a high fraction of events resulting from the EWK $ZZ^*(\rightarrow 4\ell ) jj$ process. The enhanced phase space relies on the characteristic feature of the EWK process with two jets (jj) in the forward-backward region originating from the scattered initial-state quarks. These jets have significant rapidity separation, large invariant mass, and no additional hadronic activity from the hard scattering between the two jets \cite{RapidityGapCite}. The decay of the two Z bosons into SF-OC muons or electron pairs defines the final signature of the VBS-$ZZ^*(\rightarrow 4\ell ) jj$-like event.
