--- a/sections/theory_StandardModelShortComings.tex
+++ b/sections/theory_StandardModelShortComings.tex
@@ -1,20 +1,22 @@
 \section{Limitations of the Standard Model} 
 \label{sec:SM_Incomplete}
 
-Many discoveries have experimentally validated the Standard Model's predictions since the $20^{th}$ century. The breakthrough discovery of the Higgs boson in 2012 at the LHC validated the last piece of the theory \cite{CMSHiggsDiscovery}$\&$ \cite{ATLASHiggsDiscovery}. Many predicted parameters, such as production cross-sections and decay branching ratios for several processes, have been measured with high precision. No, statistically significant discrepancy from theory has been observed except for the controversial $W^{\pm}$ boson mass measurement from the CDF $II$ Collaboration \cite{CDFWMass}. Despite the incredible success of the theory, experimental evidence suggests that the theory is incomplete. SM has the following limitations:
+Many discoveries have experimentally validated the Standard Model's predictions since the $20^{th}$ century. The breakthrough discovery of the Higgs boson in 2012 at the LHC validated the last piece of the theory \cite{CMSHiggsDiscovery}\cite{ATLASHiggsDiscovery}. Many predicted parameters, such as production cross-sections and decay branching ratios for several processes, have been measured with high precision. No statistically significant discrepancy from theory has been observed except for the controversial $W^{\pm}$ boson mass measurement from the CDF-$II$ Collaboration \cite{CDFWMass}. Despite the spectacular success of the theory, experimental evidence suggests that the theory is incomplete. SM has the following limitations:
 
 \begin{itemize}
 
-\item{SM fails to explain the gravitational force.}
+\item{It fails to provide an explanation for dark matter, whose existence is experimentally supported by astrophysical observations such as galactic rotation curves and gravitational lensing \cite{DMGravitationalLensing}. }
 
-\item{SM only describes $5\%$ of the total energy density of the universe. It fails to explain dark matter whose existence is experimentally supported by astrophysical observations such as galactic rotation curves and gravitational lensing \cite{DMGravitationalLensing}. It also does not explain dark energy. }
+\item{The CP violation allowed in the SM cannot explain the amount of matter/anti-matter asymmetry observed in the universe. }
 
-\item{The CP violation allowed in SM cannot explain the amount of matter/anti-matter asymmetry observed in the universe. }
+\item{ The strengths of the four fundamental forces are different by many orders of magnitude. The hierarchy of such interactions has yet to be understood.}
 
-\item{ The strengths of the four fundamental forces are different by many orders of magnitude. It has yet to be understood the hierarchy of such interactions.}
+\item{ The simplest formulation of the SM discussed in this thesis assumes the neutrinos to be massless left-handed particles. However, recent experimental results suggest that the neutrino masses must be non-zero to generate the observed neutrino oscillation\cite{NeutrinoOscillation}. There are two possibilities to accommodate the neutrino masses in theory by adding either a Dirac or Majorana mass term, which remains an open question. } 
 
-\item{ The simplest formulation of SM discussed in this thesis assumes the neutrino to be massless left-handed particles. However, recent experimental results suggest that the neutrino masses must be non-zero to generate the observed neutrino oscillation\cite{NeutrinoOscillation}. There are two possibilities to accommodate the neutrino masses in theory by adding either a Dirac or Majorana mass term, which remains an open question to the SM. } 
+\item{It fails to explain the gravitational force.}
+
+\item{Some recent experimental measurements, such as the measurement of the anomalous magnetic dipole moment of a muon, \textit{Muon g-2} \cite{MuonG2}, and measurements in $B$-physics \cite{LHCB_BPhys} show evidence of deviation from the SM predictions.}
 
 \end{itemize}
  
-These limitations suggest that the SM is an effective field theory, only describing an approximation of our universe, thus, motivating the experimental searches for new physics beyond the Standard Model. Experimentally there are two ways to look for BSM physics, direct searches and indirect precision measurements. Experimental signatures of BSM-predicted particles, such as their invariant mass, are searched directly by direct searches. The thesis focuses on the indirect approach, where precisely measured SM-predicted differential cross-sections are compared with state-of-the-art theoretical predictions looking for hints of deviation caused by the BSM physics. 
+These limitations suggest that the SM is an effective field theory, only describing an approximation of our universe, thus, motivating the experimental searches for new physics beyond the Standard Model. Experimentally, there are two ways to look for BSM physics: direct searches and indirect precision measurements. Experimental signatures of BSM-predicted particles, such as their invariant masses, are searched directly by direct searches. This thesis focuses on an indirect approach, where precisely measured SM-predicted differential cross-sections are compared with state-of-the-art theoretical predictions looking for hints of deviation caused by the BSM physics. 
