--- a/thesis.tex
+++ b/thesis.tex
@@ -15,6 +15,7 @@
 \usepackage{appendix}
 \usepackage{float}
 \usepackage{cite}
+\usepackage{cancel}
 \usepackage[colorlinks = true,
             linkcolor = black,
             urlcolor  = blue,
@@ -90,7 +91,7 @@ I am sincerely grateful to many people who have had a signifcant impact on my  j
 \begin{dissertation-abstract}
 \addcontentsline{toc}{section}{Abstract}
 
-This thesis presents the cross-section measurements of two Z bosons production in association with two jets in $ZZ^*(\rightarrow 4 \ell) jj$ final state, differentially as a function of several kinematic observables, which are sensitive to the vector boson scattering. The electroweak $ZZjj$ production includes the rare triple and quartic self-couplings of gauge bosons, whose scattering amplitude at high energies is regularized by the Standard Model $H\rightarrow ZZ^{*}$ processes. The analysis is performed using the proton-proton collision data collected by the ATLAS experiment during LHC Run-2 at $\sqrt{s}=13$ TeV center-of-mass collision energy, corresponding to the integrated luminosity of $139~fb^{-1}$. Several beyond the Standard Model theories are expected to modify the electroweak $ZZjj$ cross-sections at high energies. Therefore, it is imperative to measure cross-section of electroweak $ZZjj$ processes differentially. Given the low statistics in Run-2, the detector effects corrected differential cross-sections are measured in electroweak-enhanced phase space and compared to the state-of-the-art Standard Model predictions. The differential cross-sections are also used to constrain the anomalous quartic gauge couplings using a dimension-8 Effective Field Theory formalism. 
+This thesis presents the differential cross-section measurements as a function of several kinematic observables, sensitive to vector boson scattering for two Z bosons production in association with two jets ($ZZ^*jj$), where each $Z$ boson is reconstructed in same-flavor opposite-charge two leptons final state. The electroweak $ZZ^*jj$ production includes the rare triple and quartic self-couplings of gauge bosons, whose scattering amplitude at high energies is regularized by the Standard Model $H\rightarrow ZZ^{*}$ processes. The analysis is performed using the proton-proton collision data collected by the ATLAS experiment during LHC Run-2 at $\sqrt{s}=13$ TeV center-of-mass collision energy, corresponding to an integrated luminosity of $139~fb^{-1}$. Several theories Beyond the Standard Model are expected to modify the electroweak $ZZ^*jj$ cross-sections at high energies. Therefore, performing differential cross-section measurements of electroweak $ZZ^*jj$ processes is critical. Given the low statistics in Run-2, the cross-sections corrected for detector effects are measured in an electroweak-enhanced phase space and compared to the state-of-the-art Standard Model predictions. The differential cross-sections are also used to constrain anomalous quartic gauge couplings using a dimension-8 Effective Field Theory formalism. 
 
 \end{dissertation-abstract}
 \clearpage
@@ -171,7 +172,7 @@ This thesis presents the cross-section measurements of two Z bosons production i
 \begin{appendices}
    \LARGE{\textbf{Appendices}} \\ 
    \normalsize 
-   Supplementary materials to the main body of this thesis are presented in the following appendices. Appendix \ref{Appendix:Contribution} summarizes my contributions to the measurement presented in this thesis as well as to the ATLAS experiment. The largest source of systematic uncertainty on the results is the unfolding bias; thus, Appendix \ref{Appendix:Unfolding_bias} summarizes the studies conducted to understand the source of this bias. Finally, Appendix \ref{Appendix:VBSSupRegion} presents the detector-level measurements, and the differential unfolded cross-sections measured in the VBS-suppressed region of the phase space. 
+   Supplementary materials to the main body of this thesis are presented in the following appendices. Appendix \ref{Appendix:Contribution} summarizes my contributions to the measurement presented in this thesis as well as to the ATLAS experiment. The largest source of systematic uncertainty on the results is the unfolding bias and Appendix \ref{Appendix:Unfolding_bias} summarizes the studies conducted to understand the source of this bias. Finally, Appendix \ref{Appendix:VBSSupRegion} presents the detector-level measurements and the differential unfolded cross-sections measured in the VBS-suppressed region of the phase space. 
  
 
 	\include{sections/Appendix}
