--- a/sections/Analysis_Background.tex
+++ b/sections/Analysis_Background.tex
@@ -3,7 +3,7 @@ In addition to the three signal physics processes, parton initiated $qqZZ$, gluo
 \subsection{Data Driven Estimate of Fake Background}
 \label{subsec:FakeBackground}
 
-\textit{Non-prompt leptons} originate from a non-hard scatter source, either from a secondary interaction such as jet decay or from charged tracks misidentification. Figure \ref{fig:NonPromptLepton} shows an example of non-prompt lepton production. The hard scatter process produces a b-jet which in secondary interaction produces a muon whose track does not point towards the interaction vertex and is surrounded by jet activities. The signal lepton criteria of isolation and TTVA discussed in Section \ref{sec:ObjReconstruction} discards most of the non-prompt leptons. However, some non-prompt leptons pass the signal criteria and, in association with other prompt leptons, form a quadruplet in the signal region. Thus, giving rise to the \textit{fake background} or \textit{non-prompt background} events for the analysis. The origins of non-prompt leptons are discussed in detail in Section \ref{subsubsec:LepComp}.
+\textit{Non-prompt leptons} originate from a non-hard scatter source, either from a secondary interaction such as jet decay or from charged tracks misidentification. Figure \ref{fig:NonPromptLepton} shows an example of non-prompt lepton production, where a b-jet from hard scattering produces a muon whose track does not point towards the interaction vertex and is surrounded by jet activities. The signal lepton criteria of isolation and TTVA discussed in Section \ref{sec:ObjReconstruction} discards most of the non-prompt leptons. However, some non-prompt leptons pass the signal criteria and, in association with other prompt leptons, form a quadruplet in the signal region. Thus, giving rise to the \textit{fake background} or \textit{non-prompt background} events for the analysis. The origins of non-prompt leptons are discussed in detail in Section \ref{subsubsec:LepComp}.
 
 \begin{figure}[!htb]
     \centering
@@ -11,7 +11,7 @@ In addition to the three signal physics processes, parton initiated $qqZZ$, gluo
     \caption{A schematic of the non-prompt lepton from semi-leptonic decays of b-hadrons. Jet activities surround the non-prompt muon, and the muon track does not point to the hard scatter interaction point.\label{fig:NonPromptLepton}}
 \end{figure}
 
-The fake backgrounds could be predicted using the MC for $Z(\rightarrow \ell \ell) + jets $, $t\bar{t}$ and $WZ$ processes where one or more non-prompt leptons in association with the prompt leptons form a signal quadruplet. However, it is difficult to predict the statistically limited contribution of fake backgrounds precisely using MC generators. It is also challenging to precisely model the non-prompt leptons originating from the reconstruction effects. Therefore, the fake backgrounds are estimated using an entirely data-driven technique discussed in this Section. Figure \ref{fig:FakeBkgOverview} shows the schematic of the whole background estimation process. The fake factors are evaluated from a combined control region (CR), formed by combining two independent control regions $Z+jets$ and $t\bar{t}$. Both regions are enriched in non-prompt leptons, and the combination is discussed in Section \ref{subsubsec:CR}. Section \ref{subsubsec:EstimationStrategy} discusses the technical aspects of the fake factor method, and Section \ref{subsubsec:FakeEff} discusses the fake efficiencies. The fake background is estimated by applying the fake factors to each anti-signal lepton in non-signal quadruplets. First, the background estimation technique is validated in fake-enriched validation regions discussed in Section \ref{subsubsec:Validation} and applied to the signal region, which is discussed in Section \ref{subsubsec:SREstimation}. 
+The fake backgrounds could be predicted using the MC for $Z(\rightarrow \ell \ell) + jets $, $t\bar{t}$ and $WZ$ processes where one or more non-prompt leptons in association with the prompt leptons form a signal quadruplet. However, it is difficult to predict the statistically limited contribution of fake backgrounds precisely using MC generators. It is also challenging to precisely model the non-prompt leptons originating from the reconstruction effects, such as misidentification and photon conversion. Therefore, the fake backgrounds are estimated using an entirely data-driven technique discussed in this Section. Figure \ref{fig:FakeBkgOverview} shows the schematic of the whole background estimation process. The \textit{fake factor(F)}, which is defined as the fraction of non-prompt leptons that pass the signal requirement given the number of non-prompt leptons that fail the signal requirements, is estimated from a combined control region (CR). The combined control region is formed by combining two independent control regions $Z+jets$, and $t\bar{t}$, which are enriched in non-prompt leptons, and the combination is discussed in Section \ref{subsubsec:CR}. Section \ref{subsubsec:EstimationStrategy} discusses the technical aspects of the fake factor method, and Section \ref{subsubsec:FakeEff} discusses the fake efficiencies. The fake background is estimated by applying the fake factors to each \textit{anti-signal} lepton that fails the TTVA and isolation requirements in non-signal quadruplets. First, the background estimation technique is validated in fake-enriched validation regions discussed in Section \ref{subsubsec:Validation} and applied to the signal region, which is discussed in Section \ref{subsubsec:SREstimation}. 
 
 \begin{figure}[!htb]
     \centering
@@ -30,7 +30,7 @@ The fake background MC predictions provide essential insight into the origin of 
     
     \item{ \textit{ChargeFlipIsoElectron}: electrons whose charge is mismeasured at detector-level and is classified as a non-prompt.}
     
-    \item{ \textit{PromptMuon}: muons originate from either the hard scatter or a boson decay. These muons are treated as prompts for signal and background control regions.}
+    \item{ \textit{PromptMuon}: muons originate from either the hard scatter or a boson decay. These muons are treated as prompts in signal and background control regions.}
     
     \item{\textit{PromptPhotonConversion}: non-prompt electrons originating from photon conversion. }
     
@@ -44,7 +44,7 @@ The fake background MC predictions provide essential insight into the origin of 
 
 \end{itemize}
 
-Figure \ref{fig:LeptonCompositionSRVBS} shows the origin of all leptons that are part of the quadruplet in the events with a signal quadruplet and a dijet. Most of the leptons in these regions are prompt and predominantly originate from $ggZZ$, $qqZZ$, and $ EWK qqZZjj$ processes. The leptons are classified \textit{Unknown/KnownUnknown} due to insufficient truth information and mainly originate from $ttZ(\rightarrow \ell \ell)$ and $VVV$ processes. Due to technical implementation in these simulations, it lacks information on the intermediary bosons for these samples, thus failing to identify the lepton origin. The \textit{Unknown/KnownUnknown} leptons are treated as prompt leptons in the signal region. This treatment relies on the fact that $\Delta R$ between the \textit{Unknown/KnownUnknown} classified truth leptons and reconstruction level lepton is observed to be close to $0$. The \textit{Unknown/KnownUnknown} classified leptons are treated as non-prompt leptons in the background control regions. 
+Figure \ref{fig:LeptonCompositionSRVBS} shows the origin of all leptons that are part of the quadruplet in the events with a signal quadruplet and a dijet. Most of the leptons in these regions are prompt and predominantly originate from $ggZZ$, $qqZZ$, and EWK $qqZZjj$ processes. The leptons are classified \textit{Unknown/KnownUnknown} due to insufficient truth information and mainly originate from $ttZ(\rightarrow \ell \ell)$ and $VVV$ processes. Due to technical implementation in these simulations, it lacks information on the intermediary bosons for these samples, thus failing to identify the lepton origin. The \textit{Unknown/KnownUnknown} leptons are treated as prompt leptons in the signal region. This treatment relies on the fact that $\Delta R$ between the \textit{Unknown/KnownUnknown} classified truth leptons and reconstruction level lepton is observed to be close to $0$. The \textit{Unknown/KnownUnknown} classified leptons are treated as non-prompt leptons in the background control regions. 
 
 Figure \ref{fig:NonPromptLepSRDijet} shows the predicted fraction of non-prompt electrons (left) and non-prompt muons (bottom) in the events with a signal quadruplet and a dijet. The non-prompt leptons originating from $b$-hadrons or $c$-hadrons are collectively called \textit{heavy flavor (HF)} non-prompt leptons, whereas all other non-prompt leptons are categorized as \textit{light flavor (LF)}. About $50\%$ of non-prompt electrons in the signal region originate from heavy flavor sources, whereas more than $90\%$ of non-prompt muons originate from the heavy flavor decays.
 
@@ -63,9 +63,9 @@ Figure \ref{fig:NonPromptLepSRDijet} shows the predicted fraction of non-prompt 
 
 \subsubsection{Control Regions}
 \label{subsubsec:CR}
-The fake factors are measured from data in a fake enriched background control region formed by combining two independent control regions, the $Z+jets$ control region and the $t\bar{t}$ control region. An event in the control regions consists of a prompt lepton pair from a physics process and additional leptons from non-prompt sources. Both control regions use a single or di-lepton trigger similar to the signal region and require the leading and sub-leading leptons in an event to satisfy $p_{T,~leading~lepton} > 20$ GeV and $p_{T,~sub-leading~lepton} > 15$ GeV. An event in the $Z+jets$ CR consists of an SF-OC prompt-lepton pair from the Z boson decay with an invariant mass of $ 76~GeV~<~m_{\ell \ell}~<~106~GeV$, and additional leptons. Additionally, no events can have missing transverse energy higher than $50$ GeV to suppress the contamination from the $WZ$ process. Similarly, the $t\bar{t}$ CR consists of events with different flavor prompt-lepton pairs and additional leptons. An event in the $t\bar{t}$ CR requires at least one b-tagged jet to reduce the $WZ$ contamination. The b-tagging in the $t\bar{t}$ CR is performed by a flavor tagging tool described in Ref \cite{btagATLAS}.
+The fake factors are measured from data in the fake enriched background control region. The control region is formed by combining two independent control regions, the $Z+jets$ control region and the $t\bar{t}$ control region. An event in the control regions consists of a prompt lepton pair from a physics process such as a boson or top-quark decay and additional leptons from non-prompt sources. Both control regions use a single or di-lepton trigger similarly to the signal region and require the leading and sub-leading leptons in an event to satisfy $p_{T,~leading~lepton} > 20$ GeV and $p_{T,~sub-leading~lepton} > 15$ GeV. An event in the $Z+jets$ CR consists of an SF-OC prompt-lepton pair from the Z boson decay with an invariant mass of $ 76~GeV~<~m_{\ell \ell}~<~106~GeV$, and additional leptons. Additionally, no events can have missing transverse energy higher than $50$ GeV to suppress the contamination from the $WZ$ process. Similarly, the $t\bar{t}$ CR consists of events with different flavor prompt-lepton pairs and additional leptons. An event in the $t\bar{t}$ CR requires at least one b-tagged jet to reduce the $WZ$ contamination. The b-tagging in the $t\bar{t}$ CR is performed by a flavor tagging tool described in Ref \cite{btagATLAS}.
 
-Figure \ref{fig:FakeFractionBaseline} shows the fake fractions, fraction of leptons originating from a non-prompt source of the additional baseline electrons (left) and muons (right) as a function of their $p_{T}$ in the $Z+jets$ CR and the $t\bar{t}$ CR. A high fraction ($\geq 80\%$) of baseline electrons originate from non-prompt sources in both $Z+jets$ CR and $t\bar{t}$ CR. More than $95\%$ of the low-$p_{T}$ baseline muons are from non-prompt sources in both control regions. These distributions show that most of the additional leptons in either control region are expected to be from non-prompt sources, thus,  motivating the control regions to evaluate the fake factors.
+Figure \ref{fig:FakeFractionBaseline} shows the fractions of additional electrons (left) and muons (right) originating from a non-prompt source as a function of their $p_{T}$ in the $Z+jets$ CR and the $t\bar{t}$ CR. The fake fraction is defined as a ratio of the additional leptons that are classified as non-prompt to overall additional baseline leptons. A high fraction ($\geq 80\%$) of baseline electrons originate from non-prompt sources in both $Z+jets$ CR and $t\bar{t}$ CR. More than $95\%$ of the low-$p_{T}$ baseline muons are from non-prompt sources in both control regions. These distributions show that most of the additional leptons in either control region are expected to be from non-prompt sources, thus,  motivating the control regions to evaluate the fake factors.
 
 \begin{figure}[!htb]
     \begin{subfigure}{.48\textwidth}
@@ -81,8 +81,7 @@ Figure \ref{fig:FakeFractionBaseline} shows the fake fractions, fraction of lept
         \caption{Fraction of non-prompt electrons and muons in the $Z+jets$ and $t\bar{t}$ control regions. \label{fig:FakeFractionBaseline}}
 \end{figure}
 
-The control regions have a unique non-prompt lepton composition as shown by Figures \ref{fig:FakeCompositionCR2LElectron} and \ref{fig:FakeCompositionCR2LMuon}. More than $80\%$ of the non-prompt electrons in the $Z+jets$ CR originate from the light flavor decays, but about $60\%$ are from the light flavor decays in the $t\bar{t}$ CR. Similarly, about $80\%$ of the non-prompt muons in the $Z+jets$ CR originate from the heavy flavor, whereas more than $90\%$ are from the heavy-flavor decays in the $t\bar{t}$ CR. The non-prompt compositions of the signal region shown in Figure \ref{fig:NonPromptLepSRDijet} are different from either control region. The two independent control regions are combined to form a single control region with a similar non-prompt lepton composition as the signal region.
-
+The control regions have a unique non-prompt lepton composition as shown by Figures \ref{fig:FakeCompositionCR2LElectron} and \ref{fig:FakeCompositionCR2LMuon}. More than $80\%$ of the non-prompt electrons in the $Z+jets$ CR originate from the light flavor decays, but about $60\%$ are from the light flavor decays in the $t\bar{t}$ CR. Similarly, about $80\%$ of the non-prompt muons in the $Z+jets$ CR originate from the heavy flavor, whereas more than $90\%$ are from the heavy-flavor decays in the $t\bar{t}$ CR. The non-prompt compositions of the signal region shown in Figure \ref{fig:NonPromptLepSRDijet} are different from either control region. The non-prompt leptons from different sources have different probabilities of satisfying the signal lepton requirements. Thus, the two independent control regions are combined to form a single control region whose non-prompt lepton composition matches that of the signal region. 
 \begin{figure}[!htb]
     \begin{subfigure}{.48\textwidth}
       \centering
@@ -118,18 +117,17 @@ The control regions have a unique non-prompt lepton composition as shown by Figu
         \caption{ Origins of non-prompt electrons (left) and muons (right) in the combined control region. \label{fig:NonPromptCombined}}
 \end{figure}
 
-The $b$-jet requirement applied to suppress the prompt-lepton contamination from the WZ process in $t\bar{t}$ CR ensures the presence of at least one jet in all events. Therefore, events without jets in the combined control region only contain the $Z+jets$ $n_{jet}~=~0$ events. The two control regions are first weighted and combined for the events with the jets to match the heavy flavor composition of the $n_{jet}~>~0$ events in the signal region. The combination weights are evaluated by solving the following equation$:$
-
+The $b$-jet requirement applied to suppress the prompt-lepton contamination from the WZ process in $t\bar{t}$ CR ensures the presence of at least one jet in all events. Therefore, events without jets in the combined control region only consist of $Z+jets$ events. The two control regions are first weighted and combined for the events with the jets to match the heavy flavor composition of the $n_{jet}~>~0$ events in the signal region. The combination weights are evaluated by solving the following equation,
 \begin{equation}
 \begin{aligned}
-\frac{\{w \times N_{Z+jets} \times f_{HF, Z+jets}\} + \{ (1-w) \times N_{t\bar{t}} \times f_{HF, t\bar{t}}\}}{\{w \times N_{Z+jets} + (1-w) \times N_{t\bar{t}} \}} = f_{HF, SR}  \\
+\frac{\{w \times N_{Z+jets} \times f_{HF, Z+jets}\} + \{ (1-w) \times N_{t\bar{t}} \times f_{HF, t\bar{t}}\}}{\{w \times N_{Z+jets} + (1-w) \times N_{t\bar{t}} \}} = f_{HF, SR},\\
 \end{aligned}
 \end{equation}
 where $N$ is the total yield in the control region, $ f_{HF}$ is the ratio of the non-prompt leptons from heavy-flavor decays to total non-prompt leptons, and $w$ is the combination weight to be determined.
 
 As the composition of non-prompt electrons and muons are different in different regions, the weights are evaluated separately for electrons and muons and estimated to be $w_{\mu} = 0.26$ and $w_{e} = 0.06$. Figure \ref{fig:NonPromptCombined} shows the composition of the non-prompt electrons and muons in the combined control region, which is formed by a weighted combination of the $Z+jets$ CR and the $t\bar{t}$ CR.
 
-Figures \ref{fig:Add_e_ZplusX} and \ref{fig:Add_e_ttbar} show the distributions of additional baseline electrons as a function of their $p_{T}$ in the $Z+jets$ CR and $t\bar{t}$ CR, respectively, whereas, \ref{fig:Add_e_combined} show the same for the combined control region. For $Z+jets$ CR at low $p_{T}$, additional baseline electrons are overestimated in MC by about $20\%$, thus, showing the precision of MC to estimate the non-prompt leptons is limited. Similarly, Figures \ref{fig:Add_mu_ZplusX}, \ref{fig:Add_mu_ttbar} and \ref{fig:Add_mu_combined} show the distributions of additional baseline muons as a function of their $p_{T}$ in the three control regions. In $Z+jets$ CR, the low $p_{T}$ additional muons mainly originate from $Z\rightarrow \ell \ell$ process, whereas the high $p_{T}$ events originate more significantly from $t\bar{t}$ and WZ processes.
+Figures \ref{fig:Add_e_ZplusX} and \ref{fig:Add_e_ttbar} show the distributions of additional baseline electrons as a function of their $p_{T}$ in the $Z+jets$ CR and $t\bar{t}$ CR, respectively, whereas, Figure \ref{fig:Add_e_combined} show the same for the combined control region. For $Z+jets$ CR at low $p_{T}$, additional baseline electrons are overestimated in MC by about $20\%$, thus, showing the precision of MC to estimate the non-prompt leptons is limited. Similarly, Figures \ref{fig:Add_mu_ZplusX}, \ref{fig:Add_mu_ttbar} and \ref{fig:Add_mu_combined} show the distributions of additional baseline muons as a function of their $p_{T}$ in the three control regions. In $Z+jets$ CR, the low $p_{T}$ additional muons mainly originate from $Z\rightarrow \ell \ell$ process, whereas the high $p_{T}$ events originate more significantly from $t\bar{t}$ and WZ processes.
 
 \begin{figure}[!htb]
     \begin{subfigure}{.48\textwidth}
@@ -172,52 +170,46 @@ Figures \ref{fig:Add_e_ZplusX} and \ref{fig:Add_e_ttbar} show the distributions 
 \subsubsection{ Fake Factor Strategy }
 \label{subsubsec:EstimationStrategy}
 
-The centrally developed \textit{fake factor tool} by ATLAS IFF is used to estimate the fake background \cite{FakeBkgTool}. The tool takes the ratio of signal to baseline leptons, i.e., \textit{fake efficiency (f)}, calculated in the combined control region as an input where,
-
+The \textit{fake factor tool (FF tool)} by ATLAS IFF is used to estimate the fake background \cite{FakeBkgTool}. The tool takes the \textit{fake efficiency (f)} defined as the ratio of non-prompt leptons that passes the signal selection to the non-prompt baseline leptons, calculated in the combined control region as an input where,
 \begin{equation}
-f = \frac{N_{non-prompt~signal~leptons}}{N_{non-prompt~baseline~leptons}}
+f = \frac{N_{non-prompt~signal~leptons}}{N_{non-prompt~baseline~leptons}}.
 \end{equation}
 
 For a simple case of a signal region with one signal lepton, the observed signal lepton ($N^{T}$) and baseline-anti-signal lepton ($N^{L}$) can be estimated in terms of the number of prompt or real baseline leptons ($N^{B}_{R}$) and the number of non-prompt or fake baseline leptons ($N^{B}_{F}$) as
-
 \begin{equation}
-N^{T} = rN^{B}_{R}+fN^{B}_{F}
+N^{T} = rN^{B}_{R}+fN^{B}_{F},
 \label{eqn:NoOfTight}
 \end{equation}
 and 
 \begin{equation}
-N^{L} = (1-r)N^{B}_{R} + (1-f)N^{B}_{F}
+N^{L} = (1-r)N^{B}_{R} + (1-f)N^{B}_{F},
 \label{eqn:NoOfLoose}
 \end{equation}
 where, $r$ is the \textit{real efficiency} such that, 
 \begin{equation} 
-    r=\frac{N_{prompt~signal~leptons}}{N_{prompt~baseline~leptons}}
+    r=\frac{N_{prompt~signal~leptons}}{N_{prompt~baseline~leptons}}.
 \end{equation}
 
 Equations \ref{eqn:NoOfTight} and \ref{eqn:NoOfLoose} can be written as a $2 \times 2$ matrix equation as
-
 \begin{equation}
-    \begin{pmatrix} N^{T} \\ N^{L} \end{pmatrix} =  \begin{pmatrix} r & f \\ 1-r & 1-f \end{pmatrix} \begin{pmatrix} N^{B}_{R} \\ N^{B}_{F}\end{pmatrix}
+    \begin{pmatrix} N^{T} \\ N^{L} \end{pmatrix} =  \begin{pmatrix} r & f \\ 1-r & 1-f \end{pmatrix} \begin{pmatrix} N^{B}_{R} \\ N^{B}_{F}\end{pmatrix}.
     \label{eqn:RealFakeLepton}
 \end{equation}
 
 The number of non-prompt baseline contributions is estimated by ignoring the higher-order term of the fake efficiency as
-
 \begin{equation}
-    N_{F}^{B} =  \frac{1}{r-f}[r(N^{T}+N^{L})-N^{T}]
+    N_{F}^{B} =  \frac{1}{r-f}[r(N^{T}+N^{L})-N^{T}].
     \label{eqn:NfakeBaseline}
 \end{equation}
 Therefore, the predicted number of non-prompt signal lepton is 
-
 \begin{equation}
-    N_{F}^{T} =  \frac{f}{r-f}[r(N^{T}+N^{L})-N^{T}]
+    N_{F}^{T} =  \frac{f}{r-f}[r(N^{T}+N^{L})-N^{T}].
 \label{eqn:NfakeSignal}
 \end{equation}
 
 The fake factor method assumes the $r\rightarrow 1$ limit, which simplifies Equation \ref{eqn:NfakeSignal}. However, since the real efficiency of any measurement is less than one, this approximation overestimates the fake background. To account for this overestimation, the number of genuine baseline-anti-signal prompt leptons ($N^{L}_{R}$) are measured in MC and subtracted to get the final background yield as, 
-
 \begin{equation}
-    N_{F}^{T} =  \frac{f}{1-f}[N^{L}-N^{L}_{R}]
+    N_{F}^{T} =  \frac{f}{1-f}[N^{L}-N^{L}_{R}],
 \label{eqn:NfakeSignalFinal}
 \end{equation}
 where, the coefficient \begin{equation} F=\frac{f}{1-f} \label{eqn:FakeFactor}
@@ -227,19 +219,19 @@ This method can be extended to the four-lepton signal region where there are fou
 
 \subsubsection{Fake Efficiency $\&$ Systematics}
 \label{subsubsec:FakeEff}
-Fake efficiency (f), defined in previous Section \ref{subsubsec:EstimationStrategy}, is evaluated from the combined control region using the total number of additional leptons from data as
+Fake efficiency defined in Section \ref{subsubsec:EstimationStrategy}, is evaluated from the combined control region using the total number of additional leptons from data as
 \begin{equation}{\label{eq:fakeff}}
 \begin{aligned}
-f = \frac{ N_{Data}^{Signal}~-~N_{MC}^{Prompt~Signal}}{ N_{Data}^{Baseline}~-~N_{MC}^{Prompt~Baseline}}
+f = \frac{ N_{Data}^{Signal}~-~N_{MC}^{Prompt~Signal}}{ N_{Data}^{Baseline}~-~N_{MC}^{Prompt~Baseline}},
 \end{aligned}
 \end{equation}
-Since some additional leptons could originate from prompt sources, such contributions are estimated from MC and subtracted as shown in Equation \ref{eq:fakeff}.
+where $N_{Data}^{Signal}$ and $N_{Data}^{Baseline}$ are the numbers of signal and baseline leptons, respectively, from data. Similarly, $N_{MC}^{Prompt~Signal}$ and $N_{MC}^{Prompt~Baseline}$ are the numbers of signal and baseline leptons, respectively, from MC that originate from prompt lepton sources. These subtracted prompt leptons from MC prediction account for the possible additional leptons that could originate from prompt sources.
 
 Figures \ref{fig:FakeFractionBaseline}, \ref{fig:ControlRegionsAdditionalBaselineElectronpT}, and \ref{fig:ControlRegionsAdditionalBaselineMuonpT} show that the fake-fraction and the total yield of the additional leptons are dependent on their transverse momentum $p_{T}$. Therefore, the fake efficiency evaluated using Equation \ref{eq:fakeff} depends on the lepton $p_{T}$. Because of the low resolution of the detector in forward regions, a higher number of non-prompt leptons are expected in this region; thus, the fake efficiency depends on the leptons' pseudorapidity ($\eta$). Additionally, since the non-prompt leptons predominantly originate from jets, the fake efficiency also depends on the number of jets ($n_{jets}$) in an event. 
 
-Figures \ref{fig:FakeEff_1D_Electron} and \ref{fig:FakeEff_1D_Muon} show the fake efficiencies for electrons and muons respectively as a function of $p_{T}$ (top-left), $\eta$ (top-right) and $n_{jets}$ (bottom-center). In the case of the electrons, the fake efficiency first decreases with its $p_{T}$ up to $20$ GeV and increases. Since the high-$p_{T}$ muons are most likely to originate from a prompt source, fake efficiency typically decreases as a function of $p_{T}$ for the muons. The dependency on $\eta$ is most likely from lower detector resolution causing a higher number of misidentifications and lower efficiency for TTVA.
+Figures \ref{fig:FakeEff_1D_Electron} and \ref{fig:FakeEff_1D_Muon} show the fake efficiencies for electrons and muons respectively as a function of $p_{T}$ (top-left), $\eta$ (top-right) and $n_{jets}$ (bottom-center). In the case of the electrons, the fake efficiency first decreases with its $p_{T}$ up to $20$ GeV, then increases. Since the high-$p_{T}$ muons are most likely to originate from a prompt source, fake efficiency typically decreases as a function of $p_{T}$ for the muons. The dependency on $\eta$ is most likely from lower detector resolution causing a higher number of misidentifications and lower efficiency for TTVA.
 
-As discussed in Section \ref{subsec:OR}, the lepton-favored overlap removal used in the analysis rejects jets if they overlap with leptons. Due to the $b-jet$ requirement in $t\bar{t}$ CR, the $njet=0$ events only consist of contributions from the $Z+jets$ CR, which does not have an explicit event requirement on the number of jets. The probability of non-prompt leptons passing the isolation requirement is higher in events with no jets or surrounding hadronic activity. Therefore, as observed, a higher fake efficiency is expected in events without jets.  
+As discussed in Section \ref{subsec:OR}, the lepton-favored overlap removal used in the analysis rejects jets if they overlap with leptons. Due to the $b-jet$ requirement in $t\bar{t}$ CR, the $njet=0$ events only consist of contributions from the $Z+jets$ CR, which does not have an explicit event requirement on the number of jets. The probability of non-prompt leptons passing the isolation requirement is higher in events with no jets or surrounding hadronic activity. Therefore, as observed, higher fake efficiency is expected in events without jets.  
 
 \begin{figure}[!htb]
         \begin{center}
@@ -259,7 +251,7 @@ As discussed in Section \ref{subsec:OR}, the lepton-favored overlap removal used
     \caption{Fake efficiency of fake muons measured in the combined control region from data as a function of its $p_{T}$, $\eta$, and $n_{jets}$. \label{fig:FakeEff_1D_Muon}}
 \end{figure}
 
-The final fake efficiencies in the data-driven fake background estimate are parametrized in three-dimensional distributions of $p_{T}$, $\eta$, and $n_{jets}$. Only two bins ($n_{jet}=0 ~\& ~ n_{jet} > 0$) are used for the number of jets to reduce statistical fluctuations. Figures \ref{fig:FakeEff_3D_Elec_njet0} and \ref{fig:FakeEff_3D_Elec_njet1} show the fake efficiency of an electron as a function of $p_{T} ~\&~ \eta$ for $n_{jet}=0 $ and $n_{jet}>0 $ bins, respectively. Similar distributions are shown in Figures \ref{fig:FakeEff_3D_Muon_njet0} and \ref{fig:FakeEff_3D_Muon_njet1} for muons.  
+The final fake efficiencies in the data-driven fake background estimate are parametrized in three-dimensional distributions of $p_{T}$, $\eta$, and $n_{jets}$. Only two bins ($n_{jet}=0 ~\& ~ n_{jet} > 0$) are used for the number of jets to reduce statistical fluctuations. Figures \ref{fig:FakeEff_3D_Elec_njet0} and \ref{fig:FakeEff_3D_Elec_njet1} show the fake efficiency of an electron as a function of $p_{T}$ and $\eta$ for $n_{jet}=0 $ and $n_{jet}>0 $ bins, respectively. Similar distributions are shown in Figures \ref{fig:FakeEff_3D_Muon_njet0} and \ref{fig:FakeEff_3D_Muon_njet1} for muons.  
 
 \begin{figure}[!htb]
     \begin{center}
@@ -295,7 +287,7 @@ The final fake efficiencies in the data-driven fake background estimate are para
 
 The fake efficiency distributions' binomial errors are propagated as the statistical uncertainties on the fake estimate. The subtracted prompt component of Equation \ref{eq:fakeff} is estimated using MC predictions. As discussed in Section \ref{sec:Pheno}, the prediction relies on the PDF, the energy-dependent QCD factorization and renormalization scale, and the strong coupling constant $(\alpha_{S})$. Therefore, the theory uncertainties on these three parameters are propagated as systematic uncertainties of the fake efficiency. 
 
-For each theory uncertainty, a variation-applied fake efficiency is evaluated by separately varying the numerator and denominator of the fake efficiency Equation \ref{eq:fakeff}. The difference between the variation-applied fake efficiency and the nominal fake efficiency is considered systematic uncertainty. Figures \ref{fig:FakeEffUnc_3D_Electron} and \ref{fig:FakeEffUnc_3D_Muon} show the statistical and systematic uncertainties on the fake efficiencies for electrons and muons, respectively, as a function of their $p_{T},~\eta,~\&~n_{jets}$ calculated in the combined control region. For both electrons and muons, the statistical uncertainty is dominant.
+For each theory uncertainty, a variation-applied fake efficiency is evaluated by separately varying the numerator and denominator of the fake efficiency Equation in \ref{eq:fakeff}. The difference between the variation-applied fake efficiency and the nominal fake efficiency is considered as a systematic uncertainty. Figures \ref{fig:FakeEffUnc_3D_Electron} and \ref{fig:FakeEffUnc_3D_Muon} show the statistical and systematic uncertainties on the fake efficiencies for electrons and muons, respectively, as a function of their $p_{T},~\eta,~\&~n_{jets}$ calculated in the combined control region. For both electrons and muons, the statistical uncertainty is dominant.
 
 \begin{figure}[!htb]
     \begin{center}
@@ -380,7 +372,7 @@ Figures \ref{fig:VRDF_Elec_NonPromptComp} and \ref{fig:VRDF_Muon_NonPromptComp} 
 
 The fake backgrounds for the validation regions are estimated by applying the fake factor to each baseline-anti-signal leptons in the non-signal quadruplet, as discussed in Section \ref{subsubsec:EstimationStrategy}. Figure \ref{subfig:VRDFMCRed} shows the data and the predicted MC yield in VRDF as a function of $m_{4\ell}$ where the fake backgrounds are estimated from $Z+jets$, $t\bar{t}$, and $WZ$ MC predictions. Figure \ref{subfig:VRDFFF} shows the same, but the non-prompt background events are estimated using the fake factor method. Similarly, Figures \ref{subfig:VRSCMCRed} and \ref{subfig:VRSCFF} show the yields as a function of $m_{4\ell}$ in the same charge validation region. Both regions have similar characteristics, and the fake background dominates the event yield with some contribution from other physics processes.
 
-The systematic gray bands in Figures \ref{subfig:VRDFFF} and \ref{subfig:VRSCFF} include the total systematic and statistical uncertainties from the fake factor method, as well as the uncertainties on PDF, QCD scale, and strong coupling ($\alpha_{S}$) on the $qqZZ,~qqZZjj~\&~ggZZ$ MC prediction. The bands also include the uncertainties in the cross-section measurements of the $ttZ$ and $VVV$ processes. The treatment of the systematic theoretical uncertainties is the same as that of the signal region, which will be discussed in Section \ref{subsec:TheoryUnc}. Other experimental uncertainties related to the lepton reconstruction and identification, trigger, and luminosity discussed in Section \ref{subsec:ExpUnc} are assumed to be negligible for the validation regions. For most bins in both regions, the data and MC yield are compatible within the $1\sigma$ band of the total uncertainties. Additionally, the agreement between data and MC simulation is better when the reducible events are estimated using the fake factor method, thus, fully validating the method. Moreover, the estimate from the fake factor method is robust in estimation regions where the non-prompt lepton composition is different from that of the phase space where the fake factors were derived.
+The systematic gray bands in Figures \ref{subfig:VRDFFF} and \ref{subfig:VRSCFF} include the total systematic and statistical uncertainties from the fake factor method, as well as the uncertainties on PDF, QCD scale, and strong coupling ($\alpha_{S}$) on the $qqZZ,~qqZZjj~\&~ggZZ$ MC prediction. The bands also include the uncertainties in the cross-section measurements of the $ttZ$ and $VVV$ processes. The treatment of the systematic theoretical uncertainties is the same as that of the signal region, which will be discussed in Section \ref{subsec:TheoryUnc}. Other experimental uncertainties related to the lepton reconstruction and identification, trigger, and luminosity discussed in Section \ref{subsec:ExpUnc} are assumed to be negligible for the validation regions. For most bins in both regions, the data and MC yield are compatible within the $1\sigma$ band of the total uncertainties. Additionally, the agreement between data and MC simulation is better when the reducible events are estimated using the fake factor method, thus, fully validating the method. Moreover, the estimate from the fake factor method is robust in validation regions where the non-prompt lepton composition is different from that of the phase space where the fake factors were derived.
 
 \begin{figure}[!htb]
     \centering
@@ -407,7 +399,7 @@ The systematic gray bands in Figures \ref{subfig:VRDFFF} and \ref{subfig:VRSCFF}
     \caption{ Comparison of data to the total MC prediction and fake background in the different flavor (top) and same charge (bottom) validation regions as a function of $\mFourL$.\label{fig:VRDataMCYield}}
 \end{figure}
 
-The data and MC yield comparisons for three kinematic observables, $p_{T}$ of leading lepton, $\eta$ of leading lepton, and the number of jets $n_{jets}$ are shown by Figures \ref{fig:AllDataMCYield_VRDF_pt1}, \ref{fig:AllDataMCYield_VRDF_eta1} and \ref{fig:AllDataMCYield_VRDF_njet}, respectively in VRDF. Similarly, Figures \ref{fig:AllDataMCYield_VRSC_pt1}, \ref{fig:AllDataMCYield_VRSC_eta1} and \ref{fig:AllDataMCYield_VRSC_njet}, show the data and MC yield for $p_{T}$ of leading lepton, $\eta$ of leading lepton and number of jets $n_{jets}$, respectively in VRSC. The data and MC prediction are compatible in most bins within total uncertainties in each validation region.
+The data and MC yield comparisons for three kinematic observables, $p_{T}$ of leading lepton, $\eta$ of leading lepton, and the number of jets $n_{jets}$ are shown by Figures \ref{fig:AllDataMCYield_VRDF_pt1}, \ref{fig:AllDataMCYield_VRDF_eta1} and \ref{fig:AllDataMCYield_VRDF_njet}, respectively in VRDF. Similarly, Figures \ref{fig:AllDataMCYield_VRSC_pt1}, \ref{fig:AllDataMCYield_VRSC_eta1} and \ref{fig:AllDataMCYield_VRSC_njet}, show the data and MC yield for $p_{T}$ of leading lepton, $\eta$ of leading lepton and the number of jets $n_{jets}$, respectively in VRSC. The data and MC prediction are compatible in most bins within total uncertainties in each validation region.
 
 \begin{figure}[!htb]
     \centering
@@ -424,12 +416,12 @@ The data and MC yield comparisons for three kinematic observables, $p_{T}$ of le
     \begin{subfigure}{.48\textwidth}
         \centering
         \includegraphics[width = 0.85\linewidth]{figures/Analysis/Background/Overlay_VRDF_FFApplied_eta1.pdf}
-        \caption{VRDF: $\eta_{T,~leading~lepton}$ \label{fig:AllDataMCYield_VRDF_eta1} }
+        \caption{VRDF: $\eta_{leading~lepton}$ \label{fig:AllDataMCYield_VRDF_eta1} }
     \end{subfigure}
     \begin{subfigure}{.48\textwidth}
         \centering
         \includegraphics[width = 0.85\linewidth]{figures/Analysis/Background/Overlay_VRSC_FFApplied_eta1.pdf}
-        \caption{VRSC: $\eta_{T,~leading~lepton}$ \label{fig:AllDataMCYield_VRSC_eta1} }
+        \caption{VRSC: $\eta_{leading~lepton}$ \label{fig:AllDataMCYield_VRSC_eta1} }
     \end{subfigure}\\
     \begin{subfigure}{.48\textwidth}
         \centering
@@ -454,7 +446,7 @@ Similar to the validation regions, the background in the signal region is estima
     \caption{ MC prediction and fake-factor method estimate of the fake background as a function of $\mFourL$ in the VBS-Enhanced region. Black bands represent the systematic uncertainties from the fake factor method. \label{fig:MCFFRedComparison}}
 \end{figure}
 
-Figure \ref{fig:MCFFRedStack} shows the total SM detector-level predictions and estimated fake background as a function of $\mFourL$ and $p_{T,4\ell}$ in the VBS-Enhanced region. The signal MC predictions include the combination of EWK $qqZZjj$ and QCD parton and gluon-loop initiated $qqZZ$ $ggZZ$ samples, respectively. The FF Non-Prompt, $ttV$, and $VVV$ distributions show the three background processes, where FF ~Non-Prompt is estimated using the data-driven fake factor method. The ratio panels show the predicted high values of signal-to-background ratios. 
+Figure \ref{fig:MCFFRedStack} shows the total SM detector-level predictions and estimated fake background as a function of $\mFourL$ and $p_{T,4\ell}$ in the VBS-Enhanced region. The signal MC predictions include the combination of EWK $qqZZjj$ and QCD parton and gluon-loop initiated $qqZZ$ $ggZZ$ samples, respectively. The \textit{FF Non-Prompt}, $ttV$, and $VVV$ distributions show the three background processes, where  \textit{FF Non-Prompt} is the estimated fake lepton background using the data-driven fake factor method. The ratio panels show the predicted high values of signal-to-background ratios. 
 
 \begin{figure}[!htb]
     \centering
