--- a/sections/Analysis_ObjectReconstruction.tex
+++ b/sections/Analysis_ObjectReconstruction.tex
@@ -10,7 +10,7 @@ Baseline electron objects are required to satisfy the kinematic selections of $\
 
 Signal electrons are required to pass a more stringent loose likelihood identification, \textit{LHLooseBL}, which requires at least one hit in the innermost layer of the pixel detector (IBL). The signal electrons are distinguished by tightening the impact parameter significance of the baseline electrons to $d_{0}/ \dZeroSig < 5$ and requiring an additional isolation working point identification of \textit{LooseVarRad} defined in Section \ref{subsec:ParticleRecon_Elec}. Table \ref{tab:Electron_RecoSel} summarizes the several kinematic selections imposed to define the baseline and signal electrons.
 
-\begin{table}[ht]
+\begin{table}[!htbp]
     \centering
         \caption{Definition of the baseline and signal electrons.\label{tab:Electron_RecoSel}}
         \begin{tabular}{|| l || c | c ||}
@@ -35,7 +35,7 @@ Signal electrons are required to pass a more stringent loose likelihood identifi
 \label{subsec:MuonRecon}
 Baseline muons are required to satisfy $ |\eta| < 2.7 $, $p_{T} > 5$ GeV, a loose impact parameter requirements of $|z_{0}\sin\theta| < 0.5 $ mm, and \textit{Loose} identification working point. The signal muons are identified from the baseline muons by requiring additional isolation identification of \textit{PflowLooseVarRad} defined in Section~\ref{subsec:ParticleRecon_Muon} and tightening the TTVA requirements to $d_{0}/\sigma_{d_{0}} < 3$. Table \ref{tab:muon_baseline_signal} summarizes the baseline and signal muons selection requirements.
 
-\begin{table}[ht]
+\begin{table}[!htbp]
     \centering
         \caption{Definition of the baseline and signal muons.\label{tab:muon_baseline_signal}}
         \begin{tabular}{|| l || c | c ||}
@@ -59,11 +59,11 @@ Baseline muons are required to satisfy $ |\eta| < 2.7 $, $p_{T} > 5$ GeV, a loos
 
 \subsection{Jets}
 \label{subsec:JetRecon} 
-As discussed in Section \ref{sec:EWKPheno}, the jets from the EWK $ZZjj$ production are highly energetic; thus, reconstructed jets are required to have $p_{T} > 30$ GeV. The jet energy scale and resolution calibration discussed in Section \ref{subsec:ParticleRecon_Jets} is only valid for jets within $ |\eta| < 4.5 $ region. Therefore, the baseline jets are required to be in the $ |\eta| < 4.5 $ region. Baseline jets in $ |\eta| < 2.4 $ satisfying the \textit{Tight} working point of the \textit{Jet-vertex-tagger (JVT)} tool, and in $ |\eta| > 2.5 $ satisfying the \textit{Tight} working point of \textit{forward-jet-vertex-tagger (fJVT)} tool are classified as signal jets. Table \ref{tab:jets} summarizes the details of baseline and signal jets selection. 
+As discussed in Section \ref{sec:EWKPheno}, the jets from the EWK $ZZ^*jj$ production are highly energetic; thus, reconstructed jets are required to have $p_{T} > 30$ GeV. The jet energy scale and resolution calibration discussed in Section \ref{subsec:ParticleRecon_Jets} is only valid for jets within $ |\eta| < 4.5 $ region. Therefore, the baseline jets are required to be in the $ |\eta| < 4.5 $ region. Baseline jets in $ |\eta| < 2.4 $ satisfying the \textit{Tight} working point of the \textit{Jet-vertex-tagger (JVT)} tool, and in $ |\eta| > 2.5 $ satisfying the \textit{Tight} working point of \textit{forward-jet-vertex-tagger (fJVT)} tool are classified as signal jets. Table \ref{tab:jets} summarizes the details of baseline and signal jets selection. 
 
 A particular type of jets, the \textit{b-jets}, containing b-hadrons initiated from a b-quark, is also used for the background estimation. The b-jets reconstruction relies on multivariate analysis (MVA), utilizing the fact that b-hadrons have a long mean lifetime ( $~1$ picosecond), leading to a displaced secondary vertex in the detectors. A tagger discussed in detail in Ref \cite{bTagging} with b-tagging efficiency of $77\%$ is used in the analysis to identify b-jets.
 
-\begin{table}[ht]
+\begin{table}[!htbp]
     \centering
     \caption{Definition of the baseline and signal jets.\label{tab:jets}}
         \begin{tabular}{|| l || c | c ||}
@@ -84,7 +84,7 @@ A particular type of jets, the \textit{b-jets}, containing b-hadrons initiated f
 
 In order to avoid double-counting, an \textit{overlap removal} procedure is applied to remove physics objects reconstructed from the same detector signal. The measurement uses a lepton-favored overlap removal which selects leptons over jets. Overlap removal is an iterative process in which only objects surviving all previous steps are used in the subsequent steps. Table \ref{tab:overlap_removal} summarizes the overlap removal steps, where the $\Delta R$ is the angular separation between objects calculated using rapidity.
 
-\begin{table}[ht]
+\begin{table}[!htbp]
     \centering
         \caption{Overlap removal used in the analysis. An object removed in one step does not enter into the subsequent step. \label{tab:overlap_removal}}
         \begin{tabular}{|| l || c | c ||}
