--- a/sections/Analysis_Unfolding.tex
+++ b/sections/Analysis_Unfolding.tex
@@ -1,27 +1,24 @@
-The main results of the thesis are differential cross-section measurements at the particle-level. The inclusive detector-level cross-section for a given physics process $p_{1}p_{2}\rightarrow X$ is, 
-
+The main results of the thesis are differential cross-section measurements at the particle level. The inclusive detector-level cross-section for a given physics process $p_{1}p_{2}\rightarrow X$ is, 
 \begin{equation}
-    \sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X} = A \times \epsilon \times \sigma ^{particle-level}_{p_{1}p_{2}\rightarrow X}
+    \sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X} = A \times \epsilon \times \sigma ^{particle-level}_{p_{1}p_{2}\rightarrow X},
     \label{eqn:InclusiveXS}
 \end{equation}
-where $\sigma ^{particle-level}_{p_{1}p_{2}\rightarrow X}$ is the \textit{true cross-section} of the physics process predicted by the theory, $A$ is the \textit{detector acceptance} and $\epsilon$ is the \textit{reconstruction efficiency}. The physical layout of the ATLAS detector does not cover all areas of the phase space. $A$ accounts for the limited acceptance of the ATLAS detector. Several parts of the detector have several reconstruction efficiencies, which are accounted for by the factor $\epsilon$. The detector-level cross-section is measured experimentally in terms of the number of particles in a given final state (N) and integrated Luminosity $L$ as $\sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X} = \frac{N}{L}$. The \textit{true} particle-level inclusive cross-section can be estimated by correcting for detector acceptance and detector efficiency for the measured cross-section $\sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X}$. Additionally, for differential cross-sections, where the cross-section is measured in different bins of the kinematic observables, further correction is needed to correct the resolution-induced migration between nearby bins. 
+where $\sigma ^{particle-level}_{p_{1}p_{2}\rightarrow X}$ is the \textit{true cross-section} of the physics process predicted by the theory, $A$ is the \textit{detector acceptance} and $\epsilon$ is the \textit{reconstruction efficiency}. The physical layout of the ATLAS detector does not cover all areas of the phase space. $A$ accounts for the limited acceptance of the ATLAS detector. Several parts of the detector have several reconstruction efficiencies, which are accounted for by the factor $\epsilon$. The detector-level cross-section is measured experimentally in terms of the number of particles in a given final state (N) and integrated Luminosity $L$ as $\sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X} = \frac{N}{L}$. The \textit{true} particle-level inclusive cross-section can be estimated by correcting for detector acceptance and detector efficiency on the measured cross-section $\sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X}$. Additionally, for differential cross-sections, where the cross-section is measured in different bins of the kinematic observables, further correction is needed to correct the resolution-induced migration between nearby bins. 
 
-This Chapter discusses the unfolding technique in detail. Section \ref{subsec:UnfoldingOverview} gives an Overview of the unfolding algorithm, and Section \ref{subsec:Binning} discusses the optimal binning for unfolding. Section \ref{subsec:UnfoldingValidation} validates the unfolding method, and Section \ref{subsec:Bias} discusses the bias from unfolding and the attempts to optimize the bias. 
+This Chapter discusses the unfolding technique in detail. Section \ref{subsec:UnfoldingOverview} gives an overview of the unfolding algorithm, and Section \ref{subsec:Binning} discusses the optimal binning for unfolding. Section \ref{subsec:UnfoldingValidation} validates the unfolding method, and Section \ref{subsec:Bias} discusses the bias from unfolding and the attempts to optimize the bias. 
 
 \subsection{Method Overview}
 \label{subsec:UnfoldingOverview}
-The analysis uses an \textit{iterative Bayesian unfolding} algorithm based on Baye's theorem \cite{BayesianUnfolding} \cite{Improved_BayesianUnfolding} using ATLAS-supported \textit{RooUnfold} package \cite{RooUnfold}. Bayes' theorem formulates a mathematical relation to obtain a probability of an effect $E$ caused by several independent causes $C_{i}$, given the initial probability of the causes $P(C_{i})$ and the conditional probability of the $i-th$ cause to produce the effect $P(E|C_{i})$ as, 
-
+The analysis uses an \textit{iterative Bayesian unfolding} algorithm based on Baye's theorem \cite{BayesianUnfolding} \cite{Improved_BayesianUnfolding} using the ATLAS-supported \textit{RooUnfold} package \cite{RooUnfold}. Bayes' theorem formulates a mathematical relation to obtain a probability of an effect $E$ caused by several independent causes $C_{i}$, given the initial probability of the causes $P(C_{i})$ and the conditional probability of the $i-th$ cause to produce the effect $P(E|C_{i})$ as, 
 \begin{equation}
-P(C_{i}|E) = \frac{ P(E|C_{i}) . P(C_{i}) } { \sum_{j}{ P(E|C_{j}).P(C_{j}) } }
+P(C_{i}|E) = \frac{ P(E|C_{i}) . P(C_{i}) } { \sum_{j}{ P(E|C_{j}).P(C_{j}) } }.
 \label{eqn:BayesTheorem}
 \end{equation}
 The obtained probability depends on the prior probability of the cause and the conditional probability of cause and effect, where, in experimental particle physics, the cause is the actual particle-level value, and the effect is the measured one. The prior dependency is reduced by using an iterative technique, where the outcome of the previous iteration is used as a prior for the subsequent iteration.
 
 For a single iteration, the algorithm can be summarized as, 
-
 \begin{equation}
-    U_{i} = \frac{1}{ \epsilon_{i} } \times \sum^{reco~bins}_{j}{ (R_j -F_j ) . f_{i} . \frac{M_{ji} T_{i}}{ \sum_{k}^{truth~bins}{M_{jk} T_{k}}} } 
+    U_{i} = \frac{1}{ \epsilon_{i} } \times \sum^{reco~bins}_{j}{ (R_j -F_j ) . f_{i} . \frac{M_{ji} T_{i}}{ \sum_{k}^{truth~bins}{M_{jk} T_{k}}} },
     \label{eqn:BayesianUnfolding}
 \end{equation}
 where $U_{i}$ is the unfolded yield in the target bin $i$, $T_{i}$ is the predicted truth level yield in particle bin $i$, $R_{j}$ is the observed detector-level yield in reco bin $j$ and $F_{j}$ is the subtracted detector-level reducible background yield. $M_{ij}$ is the migration matrix element from particle-level bin $j$ to detector-level bin $i$. 
@@ -31,9 +28,9 @@ Based on the discussion, conceptually, three corrections from the SM MC predicti
 \begin{itemize}
     \item{\textit{\textbf{Reconstruction efficiency ($\epsilon$):}} The reconstruction efficiency accounts for the limited efficiency of the detector. Technically, it is defined as a fraction of events that pass both detector and fiducial level selection to the events passing only the fiducial level selection. }
     
-    \item{\textit{\textbf{Fiducial fraction ($f$):}} The fiducial fraction partially accounts for events that are outside the fiducial region which are selected as part of the detector-level events due to limited detector resolution. An example of such an event would be a signal $ZZ^*(\rightarrow 4\ell) jj$ event where one of the jets originates from pile-up instead of hard-scatter. Moreover, it also accounts for the events not reconstructed at the detector-level due to the limited detector acceptance. Technically, it is defined as a fraction of events that pass both detector and fiducial level selection to the events passing only the detector-level selection. }
+    \item{\textit{\textbf{Fiducial fraction ($f$):}} The fiducial fraction partially accounts for events that are outside the fiducial region which are selected as part of the detector-level events due to limited detector resolution. An example of such an event would be a signal $ZZ^*(\rightarrow 4\ell) jj$ event where one of the jets originates from pile-up instead of hard-scatter. Technically, it is defined as a fraction of events that pass both detector and fiducial level selection to the events passing only the detector-level selection. }
     
-    \item{\textit{\textbf{Migration matrix ($M_{ij}$):}} The migration matrix is a two-dimensional matrix that accounts for events migrated from particle-level bin $j$ to detector-level bin $i$. The migration matrix corrects the probability of bin migration. It is measured in MC by comparing particle- and detector-level distributions for events that pass both fiducial- and detector-level selections. Bin migrations result from resolution effects and smearing of the reconstructed distributions. The diagonal component of the migration matrix is related to the \textit{fiducial purity}, which corresponds to the fraction of detector-level events that originate from the same bin at the particle-level. A similar distribution \textit{stability} defined as the fraction of particle-level events reconstructed in the same detector-level bin is also closely related to the diagonal component of the migration matrix. }
+    \item{\textit{\textbf{Migration matrix ($M_{ij}$):}} The migration matrix is a two-dimensional matrix that accounts for events migrated from particle-level bin $j$ to detector-level bin $i$. The migration matrix corrects the probability of bin migration. It is measured in MC by comparing particle- and detector-level distributions for events that pass both fiducial- and detector-level selections. Bin migrations result from resolution effects and smearing of the reconstructed distributions. The diagonal component of the migration matrix is related to the \textit{fiducial purity}, which corresponds to the fraction of detector-level events that originate from the same bin at the particle level. A similar distribution \textit{stability} defined as the fraction of particle-level events reconstructed in the same detector-level bin is also closely related to the diagonal component of the migration matrix. }
 \end{itemize}
 
 Figures \ref{fig:UI_mjj} and \ref{fig:MigMatrix} show the first two unfolding inputs along with purity and stability, and the migration matrix for $m_{jj}$, respectively, in the VBS-Enhanced region. The reconstruction efficiency is less than $50\%$ resulting from the poor efficiency of jet reconstruction. The fiducial fraction and purity are smaller in lower bins of $m_{jj}$, which mainly corresponds to the contribution from pile-up jets faking the event selection. The normalized migration matrix shown in the second plot with the particle-level prediction in $y-axis$ and the detector-level prediction in $x-axis$ is diagonal.
@@ -55,11 +52,11 @@ Figures \ref{fig:UI_mjj} and \ref{fig:MigMatrix} show the first two unfolding in
 
 \subsection{Binning for Unfolding}
 \label{subsec:Binning}
-Optimal binning is required to perform the unfolding procedure for all kinematic observables effectively. Two factors drive the choice of binning; first, the necessity to have large enough bin statistics to maintain the Gaussian approximation while preserving the shape of the differential distributions, and second, the necessity to minimize large bin migrations and statistical uncertainties from unfolding. Therefore, each bin must have at least $15$ events in the VBS-Suppressed region and at least $20$ events in the VBS-Enhanced signal region. 
+Optimal binning is required to effectively perform the unfolding procedure for all kinematic observables. Two factors drive the choice of binning; first, the necessity to have large enough bin statistics to maintain the Gaussian approximation in statistical uncertainty propagation while preserving the shape of the differential distributions, and second, the necessity to minimize large bin migrations and statistical uncertainties from unfolding. Therefore, each bin must have at least $15$ events in the VBS-Suppressed region and at least $20$ events in the VBS-Enhanced signal region. 
 
-To maintain a good performance of the unfolding, each bin for the kinematic observable has at least $70\%$ purity except for $p_{T,4\ell jj}$ where at least $50\%$ purity is required. Moreover, for each observable, every bin width must be equal to or greater than the resolution of the same bin. The resolution in each particle-level bin is evaluated from MC by comparing the difference of particle and detector-level yield for events that pass both fiducial- and detector-level event selection. The difference is fitted using Gaussian approximation, and twice the resulting standard deviation is taken as the resolution. Table \ref{tab:binning} shows the final bin choices for all kinematic observables used in differential cross-section measurement.
+To maintain a good performance of the unfolding, each bin for the kinematic observable has at least $70\%$ purity except for $p_{T,4\ell jj}$ where at least $50\%$ purity is required. Moreover, for each observable, every bin width must be equal to or greater than the resolution of the observable in the same bin. The resolution in each particle-level bin is evaluated from MC by comparing the difference of particle and detector-level yield for events that pass both fiducial- and detector-level event selection. The difference is fitted using Gaussian approximation, and twice the resulting standard deviation is taken as the resolution. Table \ref{tab:binning} shows the final bin choices for all kinematic observables used in differential cross-section measurement.
 
-\begin{table}
+\begin{table}[!htbp]
     \caption{Binning for all unfolded observables in VBS-Enhanced and VBS-Suppressed regions. \label{tab:binning}}
     \begin{center}
     \begin{tabular}{ | c | c | c | }
@@ -124,7 +121,7 @@ To maintain a good performance of the unfolding, each bin for the kinematic obse
 \label{subsec:UnfoldingValidation}
 The unfolding method is validated using three different tests.
 
-\subsubsection{MC Closure Test}
+\subsubsection{MC Validation Test}
 \label{subsubsec:MCClosure}
 
 The first validation of the unfolding technique is with the SM MC. An SM-predicted detector-level distribution for a kinematic observable is unfolded using the unfolding inputs from the same MC. Figure \ref{fig:unfolding_technical_closure} shows an example of the MC-based closure test for $m_{jj}$ in the VBS-Enhanced region. The detector-level MC prediction is unfolded using the inputs from the same MC, and the resulting unfolded distribution is compared with the particle-level prediction. Since both detector-level prediction and unfolding inputs are from the same MC, a perfect closure is observed when comparing the unfolded- and particle-level predictions.
@@ -137,7 +134,7 @@ The first validation of the unfolding technique is with the SM MC. An SM-predict
 
 \subsubsection{Injection Test}
 \label{subsubsec:InjectionTest}
-The analysis uses a model-independent EFT approach discussed in Section \ref{sec:EFT} to constrain the effect of BSM physics. Therefore, it is essential to test the ability of the unfolding algorithm to uncover the accurate particle-level prediction from data containing BSM physics via injection test. In an injection test, a BSM physics contribution is added to the SM detector-level prediction, unfolded with the nominal SM unfolding inputs, and compared with the BSM-added particle-level distribution. Figure \ref{fig:Dim8cont} shows an injection test for $m_{jj}$ in the VBS-Enhanced region where a BSM contribution is added to the SM MC. The BSM contribution is from linear and quadratic contributions of an $FT0$ dimension-8 EFT operator, which modifies the quartic gauge electroweak vertex shown in Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}. Figure \ref{fig:InjectTestResult} shows the result of the injection test. The BSM-added detector-level MC prediction is unfolded using nominal SM MC unfolding inputs and compared against the BSM-added particle-level distribution. A small non-closure of about $5\%$ in the last bin of $m_{jj}$ is observed, which is well within the statistical uncertainties of the unfolded distribution.
+The analysis uses a model-independent EFT approach discussed in Section \ref{sec:EFT} to constrain the effect of BSM physics. Therefore, it is essential to test the ability of the unfolding algorithm to uncover the accurate particle-level prediction from data containing BSM physics via injection test. In an injection test, a BSM physics contribution is added to the SM detector-level prediction, unfolded with the nominal SM unfolding inputs, and compared with the BSM-added particle-level distribution. Figure \ref{fig:Dim8cont} shows an injection test for $m_{jj}$ in the VBS-Enhanced region where a BSM contribution is added to the SM MC. The BSM contribution is from linear and quadratic contributions of an $FT0$ dimension-8 EFT operator, which modifies the quartic gauge electroweak vertex shown in Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}. The value of the coefficient corresponding to the injected $FT0$ dimension-8 EFT operator is at about $75\%$ of the obtained upper limit when fitting the measured cross-section, which is discussed in detail in Section \ref{sec:EFT}. Figure \ref{fig:InjectTestResult} shows the result of the injection test. The BSM-added detector-level MC prediction is unfolded using nominal SM MC unfolding inputs and compared against the BSM-added particle-level distribution. A small non-closure of about $5\%$ in the last bin of $m_{jj}$ is observed, which is well within the statistical uncertainties of the unfolded distribution.
 
 \begin{figure}[htb]
     \centering
@@ -204,7 +201,7 @@ Figure \ref{fig:unfolding_ddclosure} shows a step-by-step procedure for the data
     \end{subfigure}
     \caption{ A step-by-step overview of the data-driven closure test to get the unfolding bias. \label{fig:unfolding_ddclosure}}
 \end{figure}
-The bias observed in Figure \ref{fig:ddclosure_FinalBias} is obtained using a single iteration for Bayesian unfolding. To reduce the unfolding bias, the data-driven closure test was repeated for several iterations in the VBS-Suppressed region. The resulting unfolding bias and systematic uncertainties up to $4$ iterations are shown by Figures \ref{fig:UnfoldingBiasIteration} and \ref{fig:UnfoldingStatUnc}, respectively. As expected, the unfolding bias decreases, whereas the statistical uncertainty increases with the higher number of iterations. A single iteration is the optimal measurement choice to balance the statistical and the unfolding bias uncertainties.
+The bias observed in Figure \ref{fig:ddclosure_FinalBias} is obtained using a single iteration for Bayesian unfolding. The data-driven closure test was repeated for several iterations in the VBS-Suppressed region to reduce the unfolding bias. The resulting unfolding bias and systematic uncertainties up to $4$ iterations are shown by Figures \ref{fig:UnfoldingBiasIteration} and \ref{fig:UnfoldingStatUnc}, respectively. As expected, the unfolding bias decreases, whereas the statistical uncertainty increases with the higher number of iterations. A single iteration is the optimal measurement choice to balance the statistical and the unfolding bias uncertainties.
 
 \begin{figure}[htb]
     \centering
@@ -221,4 +218,4 @@ The bias observed in Figure \ref{fig:ddclosure_FinalBias} is obtained using a si
     \caption{ Unfolding bias (left) and statistical uncertainty (right) with up to $4$ unfolding iterations as a function of $m_{jj}$ in VBS-Suppressed region. \label{fig:BiasStatUnc}}
 \end{figure}
 
-Unfolding bias is the largest source of the systematic uncertainty of the analysis and is estimated using an MC-driven toy method discussed in Section \ref{subsec:UnfoldingUnc}. The observed significant bias is caused by detector-level pile-up jets at lower $p_{T}$ or higher $\eta$ that are not part of the fiducial phase space but are present in the detector-level measurement. The jet-vertex-tagger and forward-jet-vertex-tagger have lower efficiency in selecting the hard scattering jets at lower $p_{T}$ or higher $\eta$, thus resulting in more contamination from \textit{fiducial-fake-event}. The additional MC-based studies on the unfolding bias are summarized in Appendix \ref{Appendix:Unfolding_bias}. 
+Unfolding bias is the largest source of the systematic uncertainty of the analysis and is estimated using an MC-driven toy method discussed in Section \ref{subsec:UnfoldingUnc}. The observed significant bias is caused by detector-level pile-up jets at lower $p_{T}$ or higher $\eta$ that are not part of the fiducial phase space but are present in the detector-level measurement. Compared to the efficiencies for high $p_{T}$ or central jets, the jet-vertex-tagger and forward-jet-vertex-tagger have lower efficiency in selecting the hard scattering jets at lower $p_{T}$ or higher $\eta$ region. Thus, resulting in contamination from \textit{fiducial-fake-event}. The additional MC-based studies on the unfolding bias are summarized in Appendix \ref{Appendix:Unfolding_bias}. 
