--- a/sections/theory_ColliderPheno.tex
+++ b/sections/theory_ColliderPheno.tex
@@ -1,21 +1,31 @@
 \section{Phenomenology of Proton-Proton Collisions }    
 \label{sec:Pheno}
 
-The main results discussed in this thesis are differential cross-sections for di-Z boson production in association with two jets in a proton-proton collider at the center of mass energy of $\sqrt{s}=13~TeV$. Protons are composite particles made up of quarks and gluons. Thus, the theoretical formalism discussed above does not provide all the necessary tools for experimental cross-section measurements in hadron colliders. The differential cross-section $d\sigma$ for two particles is given by, 
+The main results discussed in this thesis are differential cross-sections for di-Z boson production in association with two jets in a proton-proton collider at the center of mass energy of $\sqrt{s}=13$ TeV. The differential cross-section measured gives the production probabilty of two $Z$ bosons and two jets as a function of their kinematic properties, as a result of $p$-$p$ interactions at the given LHC collision energy and luminosity.
 
+Protons are composite particles made up of quarks and gluons. Collisions happen between different constituents of the protons, \textit{partons}. The partons carry only a fraction of the total momentum $x_{i}$; thus a partonic cross-section is $\sqrt{\hat{s}} = \sqrt{sx_1x_2}$. Figure \ref{fig:ColliderPheno} schematically shows the di-Z boson production in association with two jets from $p$-$p$ collison. The parton interaction that produces the physics of interest ($ZZ^*jj$) is called the \textit{hard scattering}. The additional partons of the two protons that interact in the hard interaction process lead to minor energy deposits in the detector referred to as an \textit{underlying event}. Since the $p$-$p$ collision happens in bunches, other protons interact leaving energy deposits in the detector, which are referred as \textit{pileup}.
+
+\begin{figure}[!htb]
+\centering
+    \includegraphics[width=0.7\textwidth] {figures/Theory/ColliderPheno.pdf}\hspace{1cm}
+    \caption{Phenomenology of di-Z boson production in association with two jets in proton-proton collider}
+\label{fig:ColliderPheno}
+\end{figure}
+
+The differential cross-section $d\sigma$ for two particles is given by, 
 \begin{equation}
-d\sigma  = \frac{{|\mathcal{M}|}^2}{F} dQ
+d\sigma  = \frac{{|\mathcal{M}|}^2}{F} dQ,
 \label{eqn:DiffxS}
 \end{equation}
 where $F$ is the incident flux, and $dQ$ represents the Lorentz invariant phase space factor. The scattering amplitude $\mathcal{M}$ is the matrix element calculated from the Lagrangian density of the SM using a perturbative expansion \cite{QCDForCollider}.
 
-The cross-section of a process with two initial-state protons $p_{1}$ and $p_{2}$ producing the final state $X$ is given by:
+The cross-section of a hard scattering process with two initial-state protons $p_{1}$ and $p_{2}$ producing the final state $X$ is given by:
 
 \begin{equation}
-d\sigma_{p_{1}p_{2} \rightarrow X } = \int dx_{1} dx_{2} \sum_{q_{1},q_{2}} f_{q_{1}}(x_{1},\mu_{F})f_{q_{2}}(x_{2},\mu_{F}) d\sigma_{q_{1}q_{2}\rightarrow X } (x_{1},x_{2},\mu_{F},\mu_{R})
+d\sigma_{p_{1}p_{2} \rightarrow X } = \int dx_{1} dx_{2} \sum_{q_{1},q_{2}} f_{q_{1}}(x_{1},\mu_{F})f_{q_{2}}(x_{2},\mu_{F}) d\sigma_{q_{1}q_{2}\rightarrow X } (x_{1},x_{2},\mu_{F},\mu_{R}),
 \label{eqn:DifferentialPartonicXS}
 \end{equation}
-where, $q_{1},~ q_{2}$ are the partons of the protons, and $d\sigma_{q_{1}q_{2}\rightarrow X } (x_{1},x_{2},\mu_{F},\mu_{R})$ is the partonic cross-section. The functions $f_{q_{1}}(x_{1},\mu_{F}) ~\&~ f_{q_{2}}(x_{2},\mu_{F})$ are the parton distribution functions (PDF) representing the density of the partons q inside a proton carrying the longitudinal momentum fraction $x$. The PDFs are determined experimentally using data from deep-inelastic-scattering, jets production, and Drell Yan events \cite{FixedTargetDrellYan} \cite{PDF4LHC}. As shown by Figure \ref{fig:PDFFig}, a PDF of a parton depends on the reference value of the momentum transfer $Q_{0}^2$. The differences are driven by modifications of partons' momenta resulting from the emission of gluons off of quarks and the splitting of gluons to $q\bar{q}$ pairs. A PDF at any value of $Q^2$ can be calculated using the PDF at reference scale $Q_{0}^2$. The factorization scale $\mu_{F}$ determines the threshold whether the perturbative corrections modify the PDF or are included in the partonic cross-sections $d\sigma_{q_{1}q_{2}}$ \cite{QCDForCollider}.
+where $q_{1},~ q_{2}$ are the partons of the protons, and $d\sigma_{q_{1}q_{2}\rightarrow X } (x_{1},x_{2},\mu_{F},\mu_{R})$ is the partonic cross-section. The functions $f_{q_{1}}(x_{1},\mu_{F}) ~\&~ f_{q_{2}}(x_{2},\mu_{F})$ are the parton distribution functions (PDF) representing the density of the partons q inside a proton carrying the longitudinal momentum fraction $x$. The PDFs are determined experimentally using data from deep-inelastic-scattering, jets production, and Drell Yan events \cite{FixedTargetDrellYan} \cite{PDF4LHC}. As shown by Figure \ref{fig:PDFFig}, a PDF of a parton depends on the reference value of the momentum transfer $Q_{0}^2$. The differences are driven by modifications of partons' momenta resulting from the emission of gluons off of quarks and the splitting of gluons to $q\bar{q}$ pairs. A PDF at any value of $Q^2$ can be calculated using the PDF at reference scale $Q_{0}^2$. The factorization scale $\mu_{F}$ determines the threshold whether the perturbative corrections modify the PDF or are included in the partonic cross-sections $d\sigma_{q_{1}q_{2}}$ \cite{QCDForCollider}.
 
 \begin{figure}[!htb]
 \centering
@@ -28,16 +38,10 @@ The partonic cross-section is calculated perturbatively as an expansion in terms
 
 \begin{equation}
 \label{eqn:PartonicXS}
-d\sigma_{q_{1}q_{2}\rightarrow X} = \alpha_{S}^{k} \sum_{m=0}^{n} c_{m}\alpha_{S}^{m}
+d\sigma_{q_{1}q_{2}\rightarrow X} = \alpha_{S}^{k} \sum_{m=0}^{n} c_{m}\alpha_{S}^{m}.
 \end{equation}
 The coefficient $c_{m}$ depends on the center-of-mass energy, and theoretical calculations usually contain a finite number of coefficients. Leading order (LO) calculations include one term ($n=0$), whereas next-to-leading order (NLO) and next-to-next-to-leading order (NNLO) contains two ($n=1$) and three ($n=2$) terms, respectively. The theoretical calculations relevant to the thesis are generally calculated at NLO. The higher-order terms in the series contain additional virtual loop contributions and real emissions of quarks and gluons. The presence of virtual loops beyond the LO introduces singularities in the calculation of scattering amplitudes. The divergences are controlled via the renormalization procedure, where the singularities are absorbed by reparametrization of coupling and mass parameters. The renormalization process is energy-dependent. Therefore, the predicted cross-sections from theoretical calculations depend on the renormalization scale $\mu_{R}$ and the factorization scale $\mu_{F}$. The scale dependence is varied in Monte Carlo simulations to derive uncertainties on the predicted cross-section due to missing higher-order contributions. 
 
-The additional partons of the two protons that interact in the hard interaction process lead to minor energy deposits in the detector referred to as an underlying event. Any outgoing partons from the interaction emit multiple QCD radiation via the parton showering process, where the energy of each parton is split among an increasing number of other elementary particles. Due to the color confinement nature of QCD, at lower energies of the order of the pole of the QCD running coupling ($\lambda_{QCD}$), the partons are bound into stable and unstable hadrons. This process is named \textit{hadronization} and leads to the formation of collimated sprays of charged and neutral hadrons in the detector called \textit{jets}. Figure \ref{fig:ColliderPheno} schematically shows the phenomenology of di-Z boson production in association with two jets in the proton-proton collider. The theoretical predictions of such events are calculated using Monte Carlo (MC) simulations which include matrix element calculations for two partons giving two Z bosons, the parton showering, the effect of the underlying events, hadronizations, and pile-up. A comprehensive overview of the methods used in MC simulation is discussed in Ref \cite{EventGenerator}.  
+Any outgoing partons from the interaction emit multiple QCD radiation via the parton showering process, where the energy of each parton is split among an increasing number of other elementary particles. Due to the color confinement nature of QCD, at lower energies of the order of the pole of the QCD running coupling ($\lambda_{QCD}$), the partons are bound into stable and unstable hadrons. This process is named \textit{hadronization} and leads to the formation of collimated sprays of charged and neutral hadrons in the detector called \textit{jets}.
 
-\begin{figure}[!htb]
-\centering
-    \includegraphics[width=0.7\textwidth] {figures/Theory/ColliderPheno.pdf}\hspace{1cm}
-    \caption{Phenomenology of di-Z boson production in association with two jets in proton-proton collider}
-\label{fig:ColliderPheno}
-\end{figure}
-
+The theoretical predictions of such events are calculated using Monte Carlo (MC) simulations which include matrix element calculations for two partons giving two Z bosons, the parton showering, the effect of the underlying events, hadronizations, and pile-up. A comprehensive overview of the methods used in MC simulation is discussed in Ref \cite{EventGenerator}.  
